--- a/理财类书籍笔记/2 - 解读基金，我的投资观与实践.md
+++ b/理财类书籍笔记/2 - 解读基金，我的投资观与实践.md
@@ -4,15 +4,27 @@
 
 ## 第一章：投资的准备
 
+**关键的问题在于如何投资证券市场**
+
 ### 2. 什么是开放式基金
 
 开放式基金的资产管理和保管是分开的，基金公司管咱门钱的投资运作，而钱一般托管在银行的。
 
-佣金分为两部分：第一部分是认购/申购费，对于新发基金叫做认购，成立后的基金叫申购，一般费率在1%-1.5%之间。第二部分是赎回费，一般在0.5%左右。
+佣金分为两部分：
 
-开放式基金的意思是基金的总份额是不定的。开放式基金的净值是在当天股票交易市场下午3点以后再根据所持有的证券的市值来计算，一天就一个值。
+- 第一部分是认购/申购费，对于新发基金叫做认购，成立后的基金叫申购，一般费率在1%-1.5%之间。
+- 第二部分是赎回费，一般在0.5%左右。
 
-开放式基金一般分为股票基金，债券基金，货币基金以及介于股票和债券基金中间的配置型基金。
+开放式基金的意思是基金的总份额是不定的。
+
+开放式基金的净值是在当天股票交易市场下午3点以后再根据所持有的证券的市值来计算，一天就一个值。
+
+开放式基金一般分为
+
+- 股票基金：主要投资股票市场
+- 债券基金：主要投资在债券市场，如国债等
+- 货币基金：投资在短期货币市场
+- 配置型基金：介于股票和债券基金中间
 
 ### 3. 态度决定一切
 
