--- a/操作日记.md
+++ b/操作日记.md
@@ -25,3 +25,15 @@
 - 中国国航： 已经进入主升浪
 - 中国建筑： 即将进入主升浪
 
+---
+
+## 2020-11-8
+
+尝试采用技术指标分析股票情况，发现技术指标的可靠性不足，根本原因是自己在价值分析的部分没有做好，接下来应该先注重价值投资的部分。
+
+2020-11-10日应操作：
+
+- **买入福蓉科技， 成本： 25-30， 重仓**
+- 买入上海机场： 轻仓，成本67
+- 买入中信证券：
+
