--- a/理财类书籍笔记/3 - 伟大的博弈.md
+++ b/理财类书籍笔记/3 - 伟大的博弈.md
@@ -1,5 +1,7 @@
 # 伟大的博弈
 
+http://www.dudj.net/jingjicaijing/10/
+
 ## 第一章 人类本性堕落的大阴沟（1653-1789）
 
 两种理念：
@@ -11,3 +13,22 @@
 
 ## 第二章 区分好人和恶棍的界限（1789-1807
 
+
+
+
+
+## 第三章 舔食美国商业和金融蛋糕上奶油的舌头
+
+投机，很像色情，给它下个定义或许很难，但明眼人却一眼就能辨别出来。
+
+
+
+## 第四章 除了再来一场大崩溃，这一切还能以什么收场呢
+
+
+
+## 第五章 浮华世界不再是个梦想（1857-1867）
+
+
+
+## 第六章 谁能责备他们--他们现在想做什么就可以做什么了
