--- a/理财类书籍笔记/聪明的投资者.md
+++ b/理财类书籍笔记/聪明的投资者.md
@@ -1,5 +1,7 @@
 # 聪明的投资者
 
+
+
 ## 1. 聪明的投资者将获得什么
 
 投资操作是基于全面的分析，确保本金的安全和满意的投资回报。不符合这些要求的操作是投机性的。
@@ -40,3 +42,26 @@
 
 ### 第八章 非专业投资者如何分析证券： 一般方法
 
+
+
+
+
+
+
+## 第三篇 作为公司所有者的投资者
+
+### 14. 股东和管理层
+
+公司和管理层之间的关系分为三种情况：
+
+1. 法定权力机制。 这一级中，股东具有至高无上的权力，根据股东的多数意见有权雇佣和解雇管理人员，并使他们能完全依据股东们的意愿行事。
+2. 股东权力在实际运行中是否得到贯彻实施。 
+
+3. 股东是否得到管理层的实际对待。
+
+两大根本问题：
+
+- 管理层是否富有效率
+- 外部股股东的利益是否得到合适的认可
+
+**一个人的财富和他委托管理其财富的人之间有很强的联系。**
