--- a/独角兽/中国独角兽研究.md
+++ b/独角兽/中国独角兽研究.md
@@ -1,3 +1,13 @@
+猿辅导
+
+小红书
+
+马蜂窝
+
+
+
+
+
 # 中国独角兽研究
 
 本次主要针对一些具有想象力，赛道广阔的行业，如医疗，本地生活，在线教育等。本文并不包含纯的人工智能公司，因为目前考虑到，大多数人工智能公司的盈利模式问题都没有打通。
@@ -18,7 +28,7 @@
 
 https://www.tianyancha.com/company/29708592
 
-产品：美菜网。 卖菜的，很有前景， 想象力比美团还大， 但是前提是不被美团吃掉。 
+产品：美菜网。 卖菜的，很有前景
 
 据说内部管理混乱。
 
