--- a/操作日记.md
+++ b/操作日记.md
@@ -1,16 +1,8 @@
-# 操作日记
-
-
-
-
-
-
-
-
+# 操作日记 - 一周一次
 
 ## 2020-9-19日复盘
 
-### KDJ 指标
+### KDJ 指标 -- 只能作为参考
 
 - 苏宁易购： kd 交点在 15.33 ，很强。 问题在于量能不大。 危险是周KD交点为死叉
 
@@ -34,6 +26,39 @@
 2020-11-10日应操作：
 
 - **买入福蓉科技， 成本： 25-30， 重仓**
-- 买入上海机场： 轻仓，成本67
-- 买入中信证券：
+- 买入上海机场： 轻仓，成本67。 （后来没买到，飞了）
+- 买入中信证券：买入3k观察仓位
+
+## 2020-12-5
+
+- 当前持仓：
+
+  ```
+  福蓉科技：亏损0.66%， 问题不大，目前庄家在洗盘，跌到24.80左右加仓即可
+  海螺水泥：观察仓位5k，博弈明年春疫情好转后的海外建设
+  中信证券：长期看好券商， 敢跌就敢买。 中信证券不出意外要成为未来对抗摩根大通等海外顶级公司的主力。
+  美吉姆：已经达到前历史最低点，这个位置打算持续加仓，看好早教
+  民和股份： 按照定投的方式再进行， 17元左右买入
+  ```
+
+- 下周操作： 
+
+  - 等待， 芙蓉科技到位置了，有机会加点仓位看看
+  - 美吉姆定投加仓
+
+## 2020-12-14
+
+整体大盘处于绝对弱势中，外资持续流入，账户中的浮盈已经全部交代出去了，目前处于满仓状态。 此时是加仓的绝佳时机，博弈明年的1-4月份的春耕行情还是值得的。 唯一的缺憾就是，没有仓位了。
+
+- 当前持仓：
+
+  ```
+  芙蓉科技： 浮亏6个点，此时处于绝对低点，但是为了降低成本，拿5k部分做做T
+  海螺水泥：拿着不动，爱跌跌吧
+  美吉姆：看情况加仓点，仓位配到1w
+  民和股份： 要在这上面做做T了， 16-18之间
+  中信证券，躺着不动就行了
+  ```
+
+  
 
