--- a/老宋交易系统.md
+++ b/老宋交易系统.md
@@ -1,6 +1,14 @@
-# 老宋筛选股票指标
+# 老宋交易系统
 
-### 1. 初步筛选股票指标
+第一，美国领先的优质赛道，比如软件互联网、芯片电子、生物医药、航天军工、线下零售、专业服务，这六大板块。**
+
+**第二，中国具有改造潜力的落后行业，比如教育、医疗服务两大板块**
+
+
+
+## 选股 - 股票池
+
+### 1. 价值选股
 
 初步筛选的目的是为了能够获得较为合适的标的
 
@@ -13,21 +21,23 @@
 
 鸡肉股在7月份入场，8月份出清，是一个很好的套利机会（前提是的确低估）。代表：民和股份。 [关于禽大周期的思考](https://xueqiu.com/6651873681/110664623)
 
+### 基本面选股
 
-
-## 基本面选股
-
-- 选出行业每股收益排名前一半的个股
 - 选出净利润同比增长25%以上，且每股收益x元以上
 - 选出收入同比增长25%以上，每股收益*元以上
 
 
 
-## 2. 进入时机
+## 2. 交易
 
 选择已经度过一波下跌主升浪并进入窄幅横盘的股票， 一旦股价突破窄幅区间就快速进入。
 
-
-
 选择以5日均线，14日均线，34日均线系统
 
+
+
+## 趋势分析法实战经验
+
+- 不要在5日均线偏离14日均线太多时买入，风险太大
+- 如果没有在5日均线与14日均线交叉日附近买入，就不再买入
+- 不要听消息面，朋友推荐的股票
