--- a/独角兽/中国独角兽研究.md
+++ b/独角兽/中国独角兽研究.md
@@ -1,24 +1,64 @@
-猿辅导
-
-小红书
-
-马蜂窝
 
 
-
-
+VIPC6.COM_cZz108021C
 
 # 中国独角兽研究
 
 本次主要针对一些具有想象力，赛道广阔的行业，如医疗，本地生活，在线教育等。本文并不包含纯的人工智能公司，因为目前考虑到，大多数人工智能公司的盈利模式问题都没有打通。
 
+核桃编程 
+
+## 垄断企业
+
+### 1. 满帮
+
+https://www.tianyancha.com/brand/b81d411479
+
+- 软银，腾讯，高领均有投资
+
+
+
+### 2. 自如
+
+- https://www.tianyancha.com/brand/b6bdc4017
+
+- 投资方：软银，腾讯
+
+
+
+### 3. 小红书
+
+https://www.tianyancha.com/brand/ba0373574
+
+- 投资方：阿里，腾讯
+
+### 4. keep
+
+- 投资方： 高领，腾讯
+
+### 5. 货拉拉
+
+高瓴资本
+
+### 5. 人人车
+
+投资方： 腾讯
+
 ##  人工智能赛道
 
+### 1. 地平线机器人
+
+投资方有高瓴资本，比亚迪等，可能会趁着新能源车东风起来。但希望不大。
 
 
 
+### 2. 明略科技
 
+腾讯投资多轮
 
+### 3. 依图科技
+
+红杉，高瓴资本依旧跟投
 
 
 
@@ -28,13 +68,9 @@
 
 https://www.tianyancha.com/company/29708592
 
-产品：美菜网。 卖菜的，很有前景
-
-据说内部管理混乱。
+产品：美菜网。 卖菜的，很有前景，据说内部管理混乱。
 
 投资方： 高瓴资本， 美团点评
-
-![](.\image\云杉世界.png)
 
 
 
@@ -48,25 +84,23 @@ https://www.tianyancha.com/brand/b1a1a138117
 
 投资方： 高瓴资本， 腾讯， IDG
 
-![](.\image\猿辅导1.png)
 
-![](.\image\猿辅导2.png)
 
 ### 2. 小船出海 - 作业帮
 
+软银，阿里，百度，
+
 - 虽然很强，但是感觉干不过猿辅导的样子。
 
-![](.\image\作业帮.png)
 
 
-
-### 大米科技 - VIPKID
+### 3. 大米科技 - VIPKID
 
 https://www.tianyancha.com/brand/b9c6c7809
 
 - 投资方： 腾讯，红杉资本，估值40亿美金
 
-![](.\image\vipkid.png)
+
 
 
 
@@ -86,50 +120,81 @@ https://www.tianyancha.com/brand/b9c6c7809
 
 ## 旅游行业
 
-### 马蜂窝
+### 1. 马蜂窝
 
 https://www.tianyancha.com/brand/bd32a329
 
 - A，B轮，今日资本领投，C轮高瓴资本领投
 - 受疫情影响较大，但依旧看好
 
-![](.\image\马蜂窝.png)
-
-
-
 
 
 ## 医疗赛道
 
-## 京东健康 - 重点关注
+### 1. 平安医保科技
+
+https://www.tianyancha.com/brand/b676a275649
+
+投资方：软银，idg
+
+### 2. 京东健康 - 重点关注
 
 - 投资方： 高瓴资本
 
 https://www.tianyancha.com/brand/b1aa0469313
 
-
-
-### 微医云
+### 3. 微医云
 
 - 投资方： 腾讯，高瓴资本，已经准备ipo
 
 https://www.tianyancha.com/company/3466668700
 
+### 4. 高济医疗
+
+高瓴资本重仓
+
+### 5. 妙手医生
+
+腾讯投资，红杉
+
+### 6. 丁香园
+
+腾讯投资，高灵创投
+
+### 7. 企鹅杏仁
+
+腾讯投资
+
+### 8。 思派网络
+
+腾讯投资
 
 
-### 好大夫在线
 
-- D轮融资 2亿美金，腾讯领投， https://www.tianyancha.com/brand/b223110017
+## 理财赛道
 
-![](.\image\好大夫在线.png)
+### 1. 万得信息
 
+https://www.tianyancha.com/brand/b4c96116412
 
+## 新能源与无人驾驶赛道
 
+### 1. 威马汽车
 
+百度，腾讯，红杉，上海国资委
 
-### 丁香园
+### 2. Momenta
 
-- 赛道好， 医疗行业， 估值10亿美金
+腾讯投资
 
-- 投资方： 顺为资本，DCM， 不算是有名的投资方
+## 医美赛道
 
+### 1. 太美医疗科技
+
+高瓴资本，腾讯投资
+
+## 社团团购赛道
+
+### 1. 兴盛优选
+
+腾讯，美团，京东投资
