--- a/基金经理与基金选择.md
+++ b/基金经理与基金选择.md
@@ -9,15 +9,15 @@
 - 基金管理规模在200亿以上
 - 所在公司为行业前20%
 
-**谢治宇：**兴全合润（A股），兴全合宜（A+港）
+**谢治宇：**兴全合润（A股，163406），**兴全合宜（A+港，163417）**，成长
 
-**张坤：**易方达中小盘（A股），易方达蓝筹精选（A+港），消费+医药
+**张坤：**易方达中小盘（A股，110011），**易方达蓝筹精选（A+港，005827）**，消费+医药
 
-**朱少醒：**富国天惠精选成长A（161005）
+**朱少醒：****富国天惠精选成长A**（161005） -- 必须配
 
 **傅鹏博：**睿远成长价值A（007119）
 
-**周蔚文：**中欧新蓝筹A（166002）
+**周蔚文：**中欧新蓝筹A（166002），大蓝筹
 
 **董承非：**兴全趋势投资（163402）
 
