--- a/宏观经济类书籍笔记/经济指标.md
+++ b/宏观经济类书籍笔记/经济指标.md
@@ -2,21 +2,201 @@
 
 ## 1. GDP
 
-一个国家或地区所有常住单位在一定时期内生产的全部最终产品和劳务的市场价值总和
+![](.\image\GDP.png)
+
+**一个国家或地区所有常住单位在一定时期内生产的全部最终产品和劳务的市场价值总和。**
 
 ### 1. 核算方法
 
-- 收入法 GDP核算：GDP = 工资 + 税收 + 折旧 + 企业盈利
-- 支出法 GDP核算：GDP = 居民消费 + 企业投资 + 政府支出 +（出口-进口）=居民消费+企业投资+政府购买+净出口
-- **生产法** GDP核算：GDP = 总产出 - 中间投入
+- **收入法 GDP核算**：GDP = 工资 + 税收 + 折旧 + 企业盈利
+
+- **支出法 GDP核算**：GDP =居民消费+企业投资+政府购买+净出口
+
+  支出法的基本理念是：生产出的商品和服务最终只有四个去处：居民消费，企业投资，政府购买，出口。其中，居民消费，企业投资，政府支出的产品和服务中有一部分来自于外国进口，不是本国生产的，不能计算在内。
+
+- **生产法** GDP核算：GDP = 总产出 - 中间投入。将生产过程中各个环节的增加值进行加总。
+
+收入法表现的是本国本年最终产品和劳务的分配，表现为谁分配到了多少最终产品与劳务。
+
+支出法表现的是本国本年最终产品与劳务的使用，表现为最终产品与劳务是如何使用的。
+
+三种不同的方法计算得到的GDP应该是一致的，因为它们是从不同的角度对同一事物进行核算。
+
+收入法着眼于销售收入的分配，支出法着眼于最终成果的用途，增加值发着眼于生产的各个环节
+
+目前国家统计局公布的数据基于生产法。
 
 ### 2. 名义GDP 和 实际 GDP
 
-- 名义GDP： 使用当年价格计算的全部最终产品和劳务的市场价值
-- 实际GDP： 使用某一基年价格计算的全部最终产品和劳务的市场价值
-- GDP平减指数 = （名义GDP增速/实际GDP增速） * 100% 反映整体通货膨胀水平的经济指标
+- **名义GDP：** 使用当年价格计算的全部最终产品和劳务的市场价值
+- **实际GDP：** 使用某一基年价格计算的全部最终产品和劳务的市场价值
+- **GDP平减指数** = （名义GDP增速/实际GDP增速） * 100% 反映整体通货膨胀水平的经济指标
 
-## 2. PMI
+### 3. GDP 的影响
 
-PMI： 采购经理指数。通过对企业采购经理的月度调查结果统计汇总，编制而成的指数。PMI的细分项指数覆盖企业采购，生产，流通各个环节，包括制造业和非制造业领域。
+大部分时间，GDP名义同比增速和股市涨跌呈正相关关系
+
+GDP名义同比增速和中国债券市场表现，二者在趋势上基本呈现出正相关关系，但幅度并不一致。
+
+从国家发展的角度看，GDP及其增速是一个国家和地区经济实力和经济发展趋势的综合体现。
+
+### 4. GDP 不包括什么
+
+- GDP 不包括本国公民在外国取得的收入
+- GDP 不包括往年生产的产品和二手交易
+- GDP 不包括中间产品
+- GDP 不包括非生产性活动以及低下交易，黑市交易等
+
+### 5. GDP 指标的不足与改进
+
+- GDP 不是经济总量的完美指标，因为GDP不包括非市场经济活动
+- GDP 忽略了完美生活的闲暇
+- GDP没有反映一个国家的医疗，教育福利和居民的健康状况及平均寿命
+- GDP 只是数量指标，不是质量指标。我们的科技水平不行
+
+GDP 没有直接衡量这些使生活有意义的东西，但它却是衡量了能使我们过上这份有意义生活的投入能力。
+
+## 2. PMI 采购经理指数
+
+**PMI：** 采购经理指数。通过对企业采购经理的月度调查结果统计汇总，编制而成的指数。PMI的细分项指数覆盖企业采购，生产，流通各个环节，包括制造业和非制造业领域。
+
+国际上通用的监测宏观经济走势的先行性指数之一。
+
+PMI 高于50意味着经济活动在扩张，数值越高表明扩张速度越快；低于50意味着经济活动在收缩，数值越低表明收缩速度越快。
+
+### 1. 官方PMI
+
+国家统计局服务业调查中心和中国物流与采购联合会两家机构联合发布，当月最后一天公布。
+
+发布指标：制造业PMI，非制造业PMI，综合PMI产出指数
+
+官方PMI 调查样本中大企业，国企更多，更能体现大企业，国企的经济景气程度
+
+### 2.财新PMI
+
+由“Markit财经信息服务公司”编制，授权财新进行发布，在次月第一天公布
+
+发布指标：制造业PMI，服务业PMI
+
+财新PMI调查样本偏中小企业，民企，比较能体现中小企业和民企的经济景气。
+
+### 3. 季节性调整
+
+由于某些经济指标因为受到季节性因素的影响而出现可以预期的高峰和低估，所以要去除数据中季节性因素的影响。对原始统计数据进行技术性调整就叫做季节性调整。
+
+### 4. PMI 指数计算方式
+
+在每个月的22日-25日，统计机构以问卷调查的形式询问样本企业的采购经理或者主管企业运行的负责人对本企业的**生产、订单、库存、雇员、配送时间**等情况的看法，分别有比上个月上升、与上个月持平、比上个月下降三个选项，对作出每一种回答的企业个数的占比赋予不同的权重（100%、50%、0%），计算得出分项的指数，再按各分项权重进行加总得到总体的PMI指数。 
+
+制造业PMI 指数 = 新订单指数 * 30% + 生产指数 * 25% + 从业人员指数 * 20% + 供应商配送时间指数 * 15% + 原材料库存指数 * 10%
+
+- 制造业PMI 生产指数： 生产端的强弱情况
+- 新订单指数：需求端的强弱情况
+- 原材料库存和产成品库存： 库存状况和企业信心状况
+- 进口指数和生产经营活动预期指数：内需是否旺盛
+- 主要原材料购进价格指数与出厂价格指数：物价情况
+- 从业人员指数：就业状况和企业招工意愿
+
+## 3. 规模以上工业增加值
+
+工业增加值：工业企业在报告期内以货币形式表现的工业生产活动的最终成果，是指工业企业在一定时期内工业生产活动创造的价值，是国内生产总值的组成部分，可以理解为“第二产业工业部门的GDP”
+
+统计口径： 年主营业务收入达到2000w及以上的企业
+
+规模以上工业增加值的统计原则：
+
+1. 本期的工业增加值只包括本期生产的产品
+2. 工业增加值不包括中间产品，只包括最终成果
+3. 采用市场价格进行统计。计算价格采用的是生产者的价格
+
+## 4. 规模以上工业企业利润
+
+规模以上工业企业利润：规模以上工业企业在生产经营活动中各种收入扣除耗费后的利润盈余
+
+规模以上工业企业利润总额的同比增速，代表了工业企业总体的盈利状况，也是观察上市公司盈利状况的重要指标。
+
+- 工业增加值同比增速： 代表收入中产品数量的增长
+- PPI：代表收入中产品价格的增长
+- 营业收入利润率： 衡量企业经营效益
+
+## 5. 固定资产投资
+
+**固定资产：** 企业所持有的房屋，建筑物，机器，机械，运输工具以及其他与生产经营活动有关的设备，器具，工具。
+
+**固定资产投资完成额**： 固定资产投资额，是以货币形式表现的在一定时期内完成的建造和购置固定资产的工作量和相关费用的总规模，该指标是反映固定资产投资规模、结构和发展速度的综合性指标。 
+
+**统计口径**： 计划总投资500w及500w以上的建设项目投资和房地产开发投资规模
+
+民间固定资产完成额累计同比增速：反映民企的经营状况
+
+国有控股固定资产投资完成额累计同比增速：反映国有企业的生成经营状况
+
+固定资产投资：
+
+- **房地产投资：**对 利率，房地产政策敏感度非常高，同时，在以往经济下行周期中，通常也伴随着地产政策的松绑。
+- **基建投资：**逆周期调节工具，在经济下行时政府往往会扩大基建投资，稳定经济增速。
+- **制造业投资：**取决于市场供求状况和企业盈利水平
+
+基础建设投资也遵循适度原则，过高的基建投资速度不但可能造成经济过热，并且投资产出比也会随之下降，影响资金的利用效率，对其他投资有挤出作用，还会造成政府债务的快速积累
+
+制造业投资大致会遵循三个阶段：
+
+1. 需求回升
+2. 企业经营好转，包括利润恢复，库存回补，价格上涨，产能利用上升率等
+3. 投资开始启动，包括购置土地，修建厂房，购置并安装设备等
+
+## 6. 房地产行业
+
+经济周期之母：房地产成为主导中国信用扩张与收缩的主要载体，捆绑了巨量的金融信贷资源，“居民-地产商-地方政府-金融机构” 的传导链条。
+
+从供给端要关注土地供给增速和建设用地指标等因素
+
+从需求端要关注房地产调控政策，信贷利率，居民收入增速，城镇化，老龄化等因素。
+
+### 1. 投资端
+
+**房地产开发投资完成额：** 报告期内完成的全部用于房屋建设工程，土地开发工程的投资额以及公益性建筑和土地购置费等的投资
+
+**土地购置面积：**房地产开发企业在报告期内通过各种方式获得土地使用权的土地面积
+
+**土地购置费：**房地产开发企业为取得土地使用权而支付的费用。其包括：
+
+- 通过划拨方式取得的土地使用权所支付的土地补偿费，附着物，青苗补偿费，安置补偿费，土地征收管理费等
+- 通过出让方式取得土地使用权所支付的出让金
+
+土地购置费与土地成交价款的区别：
+
+- 土地购置费的口径更宽，包含了各种未来取得土地使用权所支付的费用，而土地支付价款仅仅是土地的合同价。
+- 土地购置费是分期按照实际支付金额计入房地产投资的，而土地成交价款是当期成交一次性计算的。
+
+**房屋新开工面积**：统计期内房屋正式开始破土刨槽的面积，不包含由停缓建为复工的面积，多层建筑物按照整栋房屋的全部建筑面积计入。
+
+**竣工面积：**统计期内建筑完工，可以移交使用的整栋房屋建筑面积
+
+**施工面积：**包括上期跨入本期继续施工的房屋面积，包括上期停缓建本期复工的面积，以及本期施工后又转为停缓建的面积，包括新开工面积和竣工面积。
+
+**房地产开发企业到位资金**：指房地产开发企业在报告期内实际可用于房地产开发的各种货币资金及来源渠道，到位资金同比增速反映的是房企开发资金来源和金融状况，对房地产投资能否持续关系重大。
+
+### 2. 销售端
+
+- **商品房销售面积和销售金额同比增速：**反映销售端的状况，是指报告期内出售新建商品房屋的合同总面积和总价款，指包括新房销售，不包括二手房交易数据
+- **商品房待售面积：**指截至报告期末已竣工的全部可供销售或出租的商品房建筑面积中，尚未销售或出租的商品房屋建筑面积，不包括不可销售或出租的房屋面积，反映房地产库存情况。
+
+### 3. 房价相关指标
+
+70个大中城市商品住宅价格指数：70个大中型城市商品住宅价格指数，可以反映二三线城市房价的同比和环比涨幅，是判断房价泡沫程度和政府调控政策趋势是重要依据。
+
+
+
+## 7. 社会消费品零售总额
+
+ 
+
+
+
+
+
+## 9. CPI 居民消费价格指数
+
+
 
