--- a/独角兽/中国独角兽研究.md
+++ b/独角兽/中国独角兽研究.md
@@ -4,105 +4,182 @@ VIPC6.COM_cZz108021C
 
 # 中国独角兽研究
 
-本次主要针对一些具有想象力，赛道广阔的行业，如医疗，本地生活，在线教育等。本文并不包含纯的人工智能公司，因为目前考虑到，大多数人工智能公司的盈利模式问题都没有打通。
+本次主要针对一些具有想象力，赛道广阔的行业，如医疗，本地生活，在线教育等。
 
-核桃编程 
+初步筛选规则为： 在D轮融资之前没有腾讯，高领参与的筛掉，近三年来没有获得融资的筛掉。
 
-## 垄断企业
+## nlp适合
 
-### 1. 满帮
+### 1. 地平线机器人 -- 重点关注
 
-https://www.tianyancha.com/brand/b81d411479
+https://www.tianyancha.com/brand/ba46a14891
 
-- 软银，腾讯，高领均有投资
+投资方有高瓴资本，比亚迪，宁德时代，上海人工智能产业投资基金等，可能会趁着新能源车东风起来。
 
+新能源汽车是国家必须做也一定会发展的领域，我国实现高端工业的转移我认为主要就靠半导体和新能源汽车，叠加碳中和影响，我认为该领域非常值得关注。
 
+最新2021年 **c+轮，c++轮** 融资 7.5亿美元
 
-### 2. 自如
+**非常合适**
 
-- https://www.tianyancha.com/brand/b6bdc4017
+### 2. 明略科技 - 关注
 
-- 投资方：软银，腾讯
+https://www.tianyancha.com/brand/bfdb091593
 
+2020年12月 E+轮融资2亿美元，腾讯投资多轮
 
+**非常适合**
 
-### 3. 小红书
+### 3. news break - 花牛科技 
 
-https://www.tianyancha.com/brand/ba0373574
+2021年1月最新 c 轮融资 1.15亿，脉脉评价不佳
 
-- 投资方：阿里，腾讯
-
-### 4. keep
-
-- 投资方： 高领，腾讯
-
-### 5. 货拉拉
-
-高瓴资本
-
-### 5. 人人车
-
-投资方： 腾讯
-
-##  人工智能赛道
-
-### 1. 地平线机器人
-
-投资方有高瓴资本，比亚迪等，可能会趁着新能源车东风起来。但希望不大。
-
-
-
-### 2. 明略科技
-
-腾讯投资多轮
-
-### 3. 依图科技
-
-红杉，高瓴资本依旧跟投
-
-
-
-## 本地生活
-
-### 云杉世界
-
-https://www.tianyancha.com/company/29708592
-
-产品：美菜网。 卖菜的，很有前景，据说内部管理混乱。
-
-投资方： 高瓴资本， 美团点评
-
-
-
-## 在线教育
-
-### 1. 猿辅导 -- 强烈推荐
+### 4. 猿辅导 -- 强烈推荐
 
 https://www.tianyancha.com/brand/b1a1a138117
+
+G+轮融资10亿美元
 
 线上教育老大，战斗力强大， 对手作业帮，网易有道，跟谁学都比较弱。 但是学而思作为线下巨头， 可能会更有优势。 该公司已经错过最佳加入日期。
 
 投资方： 高瓴资本， 腾讯， IDG
 
+**有些合适**
+
+### 5. 脉脉 - 有岗位
+
+最新融资2018年8月，IDG投资
+
+### 6. 天眼查 - 有岗位
+
+最新融资在2019年4月
+
+### 7. 雪球财经 - 个人看好
+
+https://www.tianyancha.com/brand/b199a1056
+
+理财一定是未来的大趋势。
+
+2020年12月完成1.2美元E轮融资。
+
+### 8.  核桃编程
+
+https://www.tianyancha.com/brand/b2002249358
+
+c轮，高瓴资本全程参与，2021年3月份最新融资2亿美元。
+
+没有nlp合适岗位
+
+## 垄断企业
+
+### 0.  核桃编程 - 重点关注
+
+https://www.tianyancha.com/brand/b2002249358
+
+c轮，高瓴资本全程参与，2021年3月份最新融资2亿美元。
+
+没有nlp合适岗位
+
+### 1. 满帮 -- 不适合
+
+https://www.tianyancha.com/brand/b81d411479
+
+战略融资17亿，软银，腾讯，高领，红杉均有投资
+
+### 2. 自如
+
+- https://www.tianyancha.com/brand/b6bdc4017
+- 2020年3月**战略融资**10亿，软银，腾讯，红杉均有投资
+
+没有合适岗位
+
+### 3. keep -- 较弱
+
+https://www.tianyancha.com/brand/b594210748
+
+- 投资方： 高领，腾讯，软银，2021年F轮融资3.6亿美元
+
+### 4. 货拉拉 -- 不适合
+
+https://www.tianyancha.com/brand/bcb7711823
+
+高瓴资本，红杉资本。F轮融资15亿美元
+
+### 5. news break - 花牛科技
+
+2021年1月最新c轮融资 1.15亿
+
+### 6. 脉脉 - 有岗位
 
 
-### 2. 小船出海 - 作业帮
 
-软银，阿里，百度，
+### 7 天眼查 - 有岗位
 
-- 虽然很强，但是感觉干不过猿辅导的样子。
-
-
-
-### 3. 大米科技 - VIPKID
-
-https://www.tianyancha.com/brand/b9c6c7809
-
-- 投资方： 腾讯，红杉资本，估值40亿美金
+最新融资在2019年4月
 
 
 
+##  人工智能赛道
 
+### 1. 地平线机器人 -- 重点关注
+
+https://www.tianyancha.com/brand/ba46a14891
+
+投资方有高瓴资本，比亚迪，宁德时代，上海人工智能产业投资基金等，可能会趁着新能源车东风起来。
+
+新能源汽车是国家必须做也一定会发展的领域，我国实现高端工业的转移我认为主要就靠半导体和新能源汽车，叠加碳中和影响，我认为该领域非常值得关注。
+
+最新2021年 **c+轮，c++轮** 融资 7.5亿美元
+
+**非常合适**
+
+### 2. 明略科技  - 关注
+
+https://www.tianyancha.com/brand/bfdb091593
+
+2020年12月 E+轮融资2亿美元，腾讯投资多轮
+
+**非常适合**
+
+### 3. 依图科技 - 非常弱，无相关职位
+
+https://www.tianyancha.com/brand/b9a4016452
+
+2020年6月，战略融资，红杉，高瓴资本依旧跟投。
+
+### 4. 雪球财经 - 个人看好
+
+https://www.tianyancha.com/brand/b199a1056
+
+理财一定是未来的大趋势。
+
+2020年12月完成1.2美元E轮融资。
+
+
+
+## 在线教育
+
+整体受到国家政策打压，在线教育领域已经不敢进去了。
+
+### 1. 猿辅导 -- 强烈推荐
+
+https://www.tianyancha.com/brand/b1a1a138117
+
+G+轮融资10亿美元
+
+线上教育老大，战斗力强大， 对手作业帮，网易有道，跟谁学都比较弱。 但是学而思作为线下巨头， 可能会更有优势。 该公司已经错过最佳加入日期。
+
+投资方： 高瓴资本， 腾讯， IDG
+
+**有些合适**
+
+### 2. 作业帮
+
+https://www.tianyancha.com/brand/bd8a467638
+
+2020年12月E+轮融资16亿美元，软银，阿里，百度，
+
+**比较适合**
 
 ## 互联网金融
 
@@ -112,24 +189,19 @@ https://www.tianyancha.com/brand/b9c6c7809
 
 
 
-
-
----
-
-
-
 ## 旅游行业
 
 ### 1. 马蜂窝
 
 https://www.tianyancha.com/brand/bd32a329
 
-- A，B轮，今日资本领投，C轮高瓴资本领投
-- 受疫情影响较大，但依旧看好
+2019年5月腾讯领投E轮融资，2.5亿美金
 
 
 
-## 医疗赛道
+## 医疗赛道 -- 都不太适合
+
+京东健康已经上市，市值3642亿港币，对比来看，其他健康公司如果上市，估值依旧不低。 接下来市场一定是健康医疗的市场，这是老龄化社会的必然趋势，也是发展中国家发展到发达国家的必然趋势。
 
 ### 1. 平安医保科技
 
@@ -137,64 +209,78 @@ https://www.tianyancha.com/brand/b676a275649
 
 投资方：软银，idg
 
-### 2. 京东健康 - 重点关注
+### 3. 微医云 -- pass
 
-- 投资方： 高瓴资本
-
-https://www.tianyancha.com/brand/b1aa0469313
-
-### 3. 微医云
-
-- 投资方： 腾讯，高瓴资本，已经准备ipo
+2021年2月最新一轮Pre-ipo 4亿美元，  腾讯，高瓴资本在投
 
 https://www.tianyancha.com/company/3466668700
 
-### 4. 高济医疗
-
-高瓴资本重仓
-
 ### 5. 妙手医生
 
-腾讯投资，红杉
+https://www.tianyancha.com/brand/bc73419725
+
+最新2021年2月E轮融资30亿人民币，腾讯，红杉投资
 
 ### 6. 丁香园
 
-腾讯投资，高灵创投
+https://www.tianyancha.com/brand/baa4f1593
 
-### 7. 企鹅杏仁
+最新2020年12月，战略融资5亿美元，腾讯，高领均投资
 
-腾讯投资
+无合适岗位
 
-### 8。 思派网络
+### 8. 思派网络
 
-腾讯投资
+https://www.tianyancha.com/brand/b4c1d128280
+
+2020年12月， E轮融资 20亿人民币，腾讯投资
 
 
-
-## 理财赛道
-
-### 1. 万得信息
-
-https://www.tianyancha.com/brand/b4c96116412
 
 ## 新能源与无人驾驶赛道
 
 ### 1. 威马汽车
 
+https://www.tianyancha.com/brand/b3a94151297
+
+2020年9月融资100亿人民币
+
 百度，腾讯，红杉，上海国资委
 
 ### 2. Momenta
 
-腾讯投资
+https://www.tianyancha.com/brand/bda01164789
+
+2021年3月，C轮融资 5亿美金，腾讯参与投资
+
+无岗位
+
+### 3. ponyai
+
+https://www.tianyancha.com/brand/bb090179739
+
+2021年2月C+轮融资1亿美元。
+
+红杉，IDG，投资
+
+无合适职位
 
 ## 医美赛道
 
-### 1. 太美医疗科技
+### 1. 太美医疗科技 - 无合适岗位
+
+https://www.tianyancha.com/brand/b5d0a70396
+
+2020年9月F轮融资
 
 高瓴资本，腾讯投资
 
 ## 社团团购赛道
 
-### 1. 兴盛优选
+### 1. 兴盛优选 - 无合适岗位
+
+https://www.tianyancha.com/brand/b16fb390293
+
+2021年2月，D轮融资30亿美元
 
 腾讯，美团，京东投资
