--- a/宏观经济类书籍笔记/百年资产启示录.md
+++ b/宏观经济类书籍笔记/百年资产启示录.md
@@ -1,2 +1,97 @@
 # 百年资产启示录
 
+## 前言
+
+配置股票，分散配置。
+
+
+
+## 未来中国的大类资产配置
+
+Calmar比率：比值越高，说明这个资产的性价比越高，比值越低说明这个资产的性价比越低。
+
+2017年发生了一个巨大的变化，公募基金的资金从主要来自零售渠道逐渐开始变成很多来自银行的委外渠道。这会导致一个变化：
+
+- 资金期限会很长。
+- 银行委外渠道中来自机构的钱，它对风控的要求很高，这会倒逼基金经理在买股票的时候，不太会愿意买那些弹性特别大，特别妖的票。
+
+这种长期资金的入市，导致基金的行为发生了变化。此前的资金来自散户渠道，散户要求的就是收益，在这种情况下，一定是博收益，博弹性，越妖越小越好。
+
+接下来整个金融市场的资金：
+
+- 以前买房子的钱，属于长钱
+- 养老的钱
+- 境外来的钱，长期资金
+- 银行理财的委托或自有投资
+
+接下来中国A股市场的资金进入，不仅会发生体量的变化，而且资金的属性和期限也会发生变化。
+
+## 外资持股的偏好是什么
+
+外资的持股偏好是什么
+
+- 优势行业：
+  - 如果全球找不到比这个国家优势行业中的优势公司更好的公司，我一定会持有
+  - 既然我配置的是一个经济体的核心股票，我必须配置一些有流动性，方便进出的大市值股票
+  - 一定会选择行业的龙头。
+- 大市值股票
+- 大公司：
+  - 持股非常集中，基本上都是奔着控股去的
+  - 从营收角度来讲，持有的这些公司基本上都是全球前10%的公司，外资进来不是什么都买，它一定买你在全球有竞争力的公司。
+
+如何跟踪外资进入A股市场的节奏？
+
+- 陆股通数据。
+- 全球主要etf每一天的申购赎回金额
+
+外资买入的国内公司，除了像茅台，格力，三一重工这样的支柱型企业外还有一些科技企业。背后的逻辑是中国未来要走转型创新的路，那么很有可能也会出现一批很有特色的科技类企业。
+
+## 最根本的问题：你在赚谁的钱
+
+赚的是谁的钱：
+
+- 赚的钱是别亏的钱，赚的是博弈的钱
+
+
+
+## 索罗斯“宏观对冲”玩法：选一个并不强的对手
+
+随着从业年限的变长， 华尔街的这些对冲基金大佬的超额收益从大趋势来讲是越来越低的。
+
+索罗斯的博弈策略
+
+- 首先， 当你选择一个固定的博弈对手时，你对他的所有信息的研究就会变得更加容易
+- 中央银行或政府作为投资人，其实非常不合格
+
+宏观研究的价值是什么 -- 研究对手的行为模式。
+
+在做宏观对冲的过程中，把握进退和取舍的时间点，又是一个很有意思的问题。
+
+
+
+## 博弈之外的基本面研究
+
+在研究一个公司的基本面的时候，基本面和股票的价格是怎样联系起来的？
+
+一个市场中理性的参与人，实业的参与人的多少决定了这个市场的有效性。
+
+什么时候博弈是主要矛盾，什么时候基本面是主要矛盾，还是跟经济本身情况相关。
+
+
+
+## 一个物理实验： 金融市场是不是可以被预测
+
+**这个世界的问题是聪明的人对所有的事情都充满了怀疑，而愚蠢的人对所有事情都信息满满**
+
+非线性系统，非稳定系统一个特征：就算你把所有的问题都搞清楚，只是在输入初始条件的时候出了一点点差错，最后的结果跟之前相比也会相差很多。
+
+![](.\image\zichan_1.png)
+
+想用模型精确预测一个经济金融学的系统，基本是不可能的。
+
+## 两步，建立对投资有指导意义的模糊模型
+
+在考虑一个问题的时候，第一步要做的就是判断需要研究的变量
+
+
+
