--- a/宏观经济类书籍笔记/中国房地产市场的时空格局.md
+++ b/宏观经济类书籍笔记/中国房地产市场的时空格局.md
@@ -1,14 +1,12 @@
 # 中国房地产市场的时空格局
 
+## 前言
 
-
-需求角度：地方的收入水平和人口流入
-
-人口负增长的收缩性城市，未来的房地产市场的需求端因素是不能得到持续的支撑的。
+需求角度：地方的收入水平和人口流入。人口负增长的收缩性城市，未来的房地产市场的需求端因素是不能得到持续的支撑的。
 
 供给端：存量的房地产市场是不是很大，在过去这些年里，它的土地开发，房地产建设导致的住房的供应大概是一个什么样的情况。
 
-
+## 一线城市的大都市圈能有多大想象力
 
 互联网不会使得城市的聚集效应大大减少。
 
@@ -16,7 +14,270 @@
 
 未来国家和国家之间的竞争，应该是都市圈跟都市圈之间的竞争，一个国家的竞争力取决于这个国家都市圈的竞争力。
 
-国家的有竞争力的行业基本会被几个行业所代表：金融，文化，教育，高科技产业
+国家的有竞争力的行业基本会被几个行业所代表：**金融，文化，教育，高科技产业**。
+
+## 人口流动的变化会带来哪些新的投资机会
+
+如果是自住，首先考虑自己的职业选择。对于个人来说，是不是去大城市其实取决于个人职业和偏好。
+
+如果是投资，一个地方的房价变化与收入水平和人口集中的趋势有关，主要看三个维度：
+
+- 农村向城市集中
+- 小城市向大城市集中
+- 大城市是阶段性的，经历过一个拐点后，人口出现重新回到市中心的趋势
 
 《规模》，《城市的胜利》，《重塑世界经济地理》
 
+
+
+## 房地产市场的价格分化趋势
+
+![](.\image\fangdichan_1.png)
+
+## 决定房价的经济学原理
+
+房价收入比。 房价租金比
+
+在市场出现均衡的时候，就一定会有一个等式：房价乘以利率等于租金。
+
+世界各国居民会将自己收入中的30%-50%花在住房相关商品上。
+
+如果真的做到房住不炒，房子只有居住功能的时候，就可以用房价收入比，房价租金比来判断房价是不是太高了。
+
+## 房价上涨空间的两个重要变量
+
+房地产这个商品是天然具有投资功能的。房产的价值会随着收入的上涨有一个持续上涨的空间。
+
+每一个城市的房价上涨空间，在需求端就取决于两个最为重要的变量，一个是收入水平，一个是人口流入的速度。
+
+对于买房子的投资者来讲，利率决定了你购买这个房子的贷款成本。
+
+投资功能给房地产市场带来一个购买动机，你会在房价还没有涨到更高的时候买，而且越早买你越能享受未来房价上涨的空间。
+
+## 学区房的成本，到底该怎么算
+
+![](.\image\fangdichan_2.png)
+
+越是在经济发展的早期，你越会预期这个国家未来可能会有高速增长，而且人口会向城市移动，于是你就会早一点买房子，然后房价和收入的比值就上去了。
+
+反而在发达国家，房地产市场比较接近于只住不炒的状态。越是房地产市场接近于只住不炒的状态，这个国家的房价收入比就会越低。
+
+五大因素决定了中国的房价收入比要比其他可比的国家更高的原因：
+
+- 收入和城市化预期：
+- 利率：利率低了就更加鼓励大家买房子投资，这又会进一步推高房价
+- 中国的土地供应政策：
+- 公租房问题：
+- 学区房：
+
+
+
+## 一路向南的东北候鸟如何影响房价
+
+可能会导致中国城市之间房价出现差异的因素：
+
+- 经济增长的潜力：城市的地理位置，城市的规模
+- 城市的综合生活质量：气候
+- 地方政府行为：中国政府的土地供应。地方政府喜欢增加工业园的用地，这样就可以招商引资了，就可以拿到地方的税收，住宅的供应不足，房价就上去了。这样，它既拿到了工业用地的招商引资的税收，又拿到房地产市场对应的住宅用地拍卖的收入和房产交易税，这样它的财政收入就最大化了。
+
+中国城市之间的房价差异是由很多中国特色的制度和政策原因导致的，包括城市之间天然的地理自然条件差异，综合起来一起影响房价。
+
+## 后工业化阶段，中心城区房产的投资逻辑
+
+房地产： 地段，地段，地段
+
+供给端因素：大拆大建，很多原来的居住用地就变成了商业用地和公共服务，基础设施用地。
+
+容积率：一个建筑物的面积和它所占土地面积之间的比值。
+
+总体来说，中心地段的房价是会更高的，因为中心地段有：
+
+- 上班便利
+- 公共服务，尤其是教育
+- 便利性。未来消费一定非常重要，市中心距离消费更近。
+
+首先是地段，其次是通勤便利性，最后是绿地，这几个因素影响一个城市内部不同地区的房价差异。
+
+
+
+判断中国未来房价的变化趋势， 以及城市之间的房价差异，也是要从需求方和供给方两个角度入手。
+
+需求方最重要的两个变量：一，收入及其变化趋势；二，人口是增长的还是萎缩的，如果是增长的，增长有多快， 如果是萎缩的，萎缩有多快。
+
+供给方看以下因素：
+
+- 这个城市的土地供应是不是充分，这要看政府的政策
+- 在建设用地指标上，多少是用来建造房子，用来造工业园，这会影响市场上住房供应的增长速度。
+- 在造房子的地里面，多少用来造住宅，多少用来造写字楼，这又会影响城市的土地供应的结构
+- 对于住宅会不会进行严格的容积率管制，这又决定我在同样的住宅用地上可以造多少房子出来。
+- 政府是不是在充分的供应廉租房和公租房， 而廉租房和公租房的供应是不是跟就业所在地是匹配的，它是离市中心比较近还是非常远。以至于大家觉得有廉租房都不想去
+- 有没有充分发挥市场机制满足老百姓租房的需求
+
+## 世界不是平的
+
+我们到底应该如何理解区域之间，城市之间经济发展的潜力，到底如何从需求方去理解一个地方房地产市场走向的决定性因素。
+
+经济活动高度集中在少数地区，而这样的少数地区其实就是以大城市，特大城市为核心的都市圈的周围。
+
+集聚效应：人口和企业在空间上集中在一起发展，集中在一起工作和生活的时候，它可以享受规模经济，效率比较高。
+
+## 回到中国地图，理解中国城市发展
+
+为什么长三角，珠三角及其周边地带的城市群最有经济发展潜力：气候，海运，宜居条件。
+
+## 三个距离透视中国城市发展潜力
+
+- 到沿海大港口距离：距离大港口越远，经济增长率越往下走，但低到一定程度时候会有一个微微的上升阶段，大概在距离大港口1500公里左右范围内会出现第二个高峰，然后进一步下降
+- 到核心大城市距离
+- 到当地市中心距离
+
+## 一个公式透视中国区域经济的发展平衡
+
+提高一个地方人均GDP方法：
+
+- 帮助这个地方提高GDP总量
+- 帮助减少人口
+
+小地方可以发展三个行业：
+
+- 农业
+- 旅游业
+- 资源产业
+
+欠发达地区人口只有两种选择：
+
+- 到大城市闯一闯，通过离开家乡换一个地方工作来提高自己的收入
+- 在老家待着
+
+
+
+## 城市发展的未来：从集聚中走向平衡
+
+
+
+
+
+## 中国经济为什么需要防范走向“欧元区化”
+
+一个货币的汇率应该跟它的劳动生产率挂钩，劳动生产率上升，货币走向升值，劳动生产率下降，货币就应该贬值。
+
+欧元区内部欠发达地区存在比较高债务的根本原因：
+
+> 欠发达国家劳动生产率较低，但大量人口由于语言，文化，宗教等障碍，无法流动到发达国家去，那么对于这些国民来讲，就要为他们提供社会保障，公共服务，就业机会等，需要大量支出。此时，又不能让自己的货币单方面贬值，因为不是一个在货币意义上独立的国家，于是货币贬值这样一个提升国家竞争力的手段都不能用。于是，有大量的支出需要，却没有能力通过发展经济来提升自己的财政收入，又缺乏通过货币贬值提高自己经济竞争力的手段，最后的结果只能是借债。
+
+中国的户籍制度。
+
+## 中国的高房价是土地空间错配
+
+土地的城市化远远快于人口的城市化
+
+中国的房地产市场是空间的供需错配，就是有供给的地方没需求，有需求的地方没供给。
+
+2003年以后，中国的人口仍然在向沿海地区集中，但是这个时候从土地供应的份额上来讲，却是中国中西部的份额越来越高。
+
+中国这样一个大国，要分地区来看，而不是只看加总的数据，否则可能会被严重误导。
+
+## 远大的新城建设热潮和鬼城的出现
+
+路越宽债越高，因为它是靠投资的，路上的车越少，说明GDP越少。
+
+鬼城是因为我们在人口流出的地方造房子。
+
+我们的新城建设在人口流出地，而且健的又大又远。
+
+
+
+## 造城运动为何引向债务负担
+
+借债将厂房建好，但厂房是空的，庄稼也没有种，企业也没有来，空借了一屁股债。
+
+地方政府的融资手段：
+
+- 将它拿到的建设用地指标和对应的已经征收的土地，通过注资的方式，注资到地方政府成立的一个国有融资平台上，本质就是一家金融公司，通过这家金融公司去银行贷款，或者发行城投债，城市投资建设债。
+
+由于大量的新城距离当地地级市非常远，这个地方新城建立的离老城越远，建的越大，密度越低；这个地方的债务除以GDP的比率就越高，意味着这个新城有投资，有建设，但是没有回报，没有企业，没有人，于是债务就上去了。
+
+## 收缩型城市：鹤岗房价低至1w是如何形成的
+
+2015年以后，中国进行了一场运动式的改革，叫做棚户区改造。
+
+
+
+
+
+## 中国为什么要调控房价
+
+为什么要调控房价：
+
+- 在很多人口流入地，高房价抬高了大家的生活成本，想要继续在大城市生活，你就会向自己的雇主要求涨工资，进而推动生产成本上升，生活成本上升
+- 当房地产价格进一步带动劳动力工资上涨的时候，生产者会觉得劳动力工资贵，于是就用机器来替代人。
+- 中国经济增长率在下滑，投资回报在下降，但房价在上涨，这导致很多企业家干脆不做实业了，买房子去了。结果房价挤出了实体经济，造成了中国经济的泡沫化和脱实向虚。
+
+
+
+## 通过管制需求的房地产调控政策能控住房价吗
+
+管制需求的结果：
+
+- 误伤刚需（提高首套房利率，首付比例），这样实际上只有富人能买得起房子，中产阶级都买不到了。
+- 人为干预平均价格（控制高房价房的供给）：导致更加严重的房地产市场上的供给短缺。
+- 一二手房价格倒挂：
+- 房价的转嫁各种应对（茶水费，指标费，装修费，车位费）
+- 摇号买房的结果（造成寻租，腐败）
+- 土地市场的拍卖限价
+- 号称要坚持活下去的房企
+- 住房质量的下滑
+- 资金转向二三线城市
+
+
+
+## 如何建立供需匹配的房地产健康长效发展机制
+
+- 地随人走。哪里人口增长就在哪里增加土地供应，这是根本办法。
+- 一线城市要发展为都市圈，范围要延伸到邻近的二三线城市去
+- 城市的用地结构要优化，减少工业用地而增加住宅供应。
+- 提高容积率，楼建高点，密一点
+- 发展多层次的租房市场。
+
+## 如何建立供需匹配的房地产健康长效发展机制
+
+- 地随人走。哪里人口增长就在哪里增加土地供应
+- 一线城市要发展成为都市圈，建房的范围可能要蔓延更大，甚至超过这个城市的管辖边界，延伸到临近的二三线城市去。
+- 城市的用地结构要优化。减少工业用地，商业用地，增加住宅用地
+- 提高容积率
+- 发展多层次租房市场
+
+
+
+## 都市圈中的大城市如何解决土地资源不足问题
+
+上海6000多平方公里的范围内，仍然有三分之一的农业用地。目前主要受限于：
+
+- 思想的限制。我们认为上海人太多，地已经占得太多了
+- 政策的限制。因为我们的土地供应受制于建设用地指标。
+
+都市圈：以核心大城市为中心，以轨道交通紧密连接中心城市和周边中小城市之间的日通勤圈。
+
+如果一个地区每天有超过15%的人口是要往返于当地和中心城市的，那么它就包含在都市圈范围之内。
+
+在人口流入地，要通过在供给侧增加土地供应，同时减少管制来缓解房价的上涨趋势：
+
+- 增加建设用地的总量供应
+- 相应的控制工业用地的供给，增加商业和住宅用地的供给
+- 在商业和住宅用地中要相应的减少商业地产和写字楼的供给，增加住宅用地的供给，而且要允许存量里面闲置的或者租金比较低的商业地产转化为住宅用地，也就是我们通常所讲的商转居。
+- 在既有的住宅用地中，通过提高容积率来造更多的房子
+- 增加廉租房，公租房来形成多层次的市场化的租房市场
+
+
+
+## 课程总结： 城市发展在集聚中走向平衡
+
+- 在区域经济发展和城市经济发展方面，中国将走上一条在集聚中走向平衡的道路。
+
+  它既能够实现利用规模经济和集聚效应来提高经济的效率，提高中国经济增长的可持续性这样一个效率目标，同时又可以实现地区之间人均GDP差距有所缩小的平衡发展目标，而且地区之间会形成更加有效和明确的分工。
+
+- 一定会出现人和钱在空间上更为集中的现象。
+
+  钱值得是消费力和资本。主要集中于长三角城市群和珠三角城市群，在这几个城市群之内又会特别集中于核心大城市周围的都市圈范围之内，而这个都市圈大概就是距离中心城区50-70公里地带。
+
+中国未来一个城市房地产价格变化，在需求方主要看两个变量：收入增长空间；人口流入的多少。从供给端看主要是政策变量引起的土地供应变化。
