--- a/宏观经济类书籍笔记/掘金科技行业.md
+++ b/宏观经济类书籍笔记/掘金科技行业.md
@@ -10,3 +10,146 @@
 ### 2. 如何评价过去十年的中国电子产业
 
 - 第一点是一个时代的大浪潮 -- 智能手机的大浪潮
+- 第二点是大贵人 -- 苹果公司
+- 第三点是一批充满激情的企业家
+- 第四点：中国的工程师红利
+
+### 3. 为何中国成为新经济蓬勃发展的热土
+
+- 第一点：技术创新需要软硬紧密结合
+- 第二点：中国有一个庞大的人口基数，互联网层面，数据的体量越大，用户群体越大，产品就越好
+
+### 4. 下一个科技产业浪潮在哪
+
+- 全球汽车行业的供应链体系的机会：汽车采购体系向中国开放之后带来的汽车零部件机会
+- 5G浪潮机会。 5G->物联网->精准数据-> 人工智能
+- 视频基数的创新：
+- 整个军民融合，科研孵化的机会
+
+## 掘金科技产业的整体脉络
+
+### 1. 商业模式与竞争分析
+
+从头到尾分析企业生产的几个环节：
+
+- 怎么做好产品
+- 通过什么样的方式和渠道推广产品，打造什么样的品牌
+- 如何将产品卖给目标客户，也就是产品能解决客户什么问题，什么痛点，能够满足用户什么需要
+- 在整个过程中上下游利益是怎么分配的
+- 如何形成独特的优势
+
+
+
+### 2. 科技产业的赛道趋势
+
+- 精准数据重构一切：要求从空间上是精准的，从时间上是及时的
+- 后智能手机时代的投资机会： 5G， 物联网，人工智能，虚拟现实
+
+
+
+### 3. 科技产业投研心法
+
+- 投资研究中的竞争分析：研究供给，研究竞争
+- 投资研究中的放大机制
+- 投资研究中的比较分析
+
+
+
+### 4. 科研孵化的机遇
+
+任何一个大国的崛起，实际上都源自自身科研成果的转化和孵化。
+
+## 科技产业投研的信息系统
+
+### 1.  预测的体系
+
+判断的全面性：
+
+
+
+
+
+## 科技行业投研的预测体系
+
+### 1. 预测体系中的比较研究
+
+预测研究最核心的是：
+
+- 比较研究 -- 不断问为什么
+- 数据来源： 精准数据
+
+未来的研究是大数据研究，科学数据研究。
+
+预测最需要解决的是信息来源的问题。
+
+### 2. 预测的核心在于数据
+
+利用常识去做出判断是错的。 做出错误的判断，第一可能性是站在自己的角度去思考这个问题；
+
+## 商业模式的本质：生产力和生产关系
+
+
+
+
+
+
+
+## 科技产业投研心法 -- 竞争分析
+
+
+
+实际上一个行业的增长情况跟龙头的股价之间是负相关关系。
+
+为什么行业高增长的时候龙头是跌的，而行业没有增长的时候龙头是涨的？ 最本质的原因是：所有产品的客户只有三类，呈现一个金字塔的结构，从上到下分别是一类，二类，三类，追求的分别是性能，性价比和价格，那么产品的发展过程也是先从性能到性价比再到价格。
+
+- 唯性能论： 最早期卖给最有钱，最追求品质的人
+- 唯性价比论：后面规模做大后成本降下来，卖给中产阶级
+- 唯价格论：最后，规模继续做大，产品卖给普通民众
+
+
+
+- 第一阶段：性能，一线厂商，以技术能力为核心
+- 第二阶段：性价比，二线厂商，以渠道能力为核心
+- 第三阶段：价格，三线厂商，以规模能力为核心
+
+任何产品生命周期分三个过程：有钱人买，穷人买，换机期。在渗透期后半期往往是集中度分散，大量厂商价格竞争，但进入换机周期，优秀厂商必须以技术创新驱动大家创新，集中度反而显著提高，龙头股价继续新高。
+
+制造业企业发展的三个阶段：
+
+- 第一阶段， 一个亿收入，代表有一个产品，开始占据一定的市场份额了
+- 第二阶段，十个亿收入，代表它的产品开始成为这个行业的龙头了
+- 第三阶段，50-100亿收入，代表它有妇之产品的能力
+
+在行业规则发生变化的时候，要特别重视，这时往往是小企业翻身的机会。行业规则的变化有两种：
+
+- 第一种：技术创新发生非常大的变化，如模拟到数字，此时往往是新企业的机会
+- 第二种：行业竞争放慢，创新放慢，往往也是后发者的机会
+
+
+
+牛股的共同特征：
+
+- 行业采用了新的规则
+- 每一个牛股的产品价格一定是涨价，涨价，通过各种方式涨价
+- 牛股背后的企业还要有产品的横向整合能力
+
+
+
+## 科技产业投研心法 - 比较研究
+
+
+
+
+
+## 商业模式的生态体系
+
+### 1. 规模效应及其边界
+
+第一，看它符不符合规模效应，即是不是规模越大越厉害
+
+规模效应的产生方式：
+
+- 规模越大，品牌越好
+- 规模越大固定成本摊薄越低
+- 规模越大采购成本越低
+
