--- a/理财类书籍笔记/趋势投资/趋势追踪.md
+++ b/理财类书籍笔记/趋势投资/趋势追踪.md
@@ -1,79 +1,82 @@
-# **趋势追踪**
+# 趋势追踪
 
-趋势追踪： 
-
-- 趋势： 每位交易者都需要有一个怎么赚钱的想法。不管有没有技术，如果你想去赚钱，却在买进之后没有上涨的趋势，那么你就不会卖到一个高价。
-- 趋势：等待趋势的首次到来，然后马上追随它。
-
-## **趋势追踪**
+## 第一章 趋势追踪
 
 **投机是对不确定的未来情况的处理。每个人的行为都是嵌入时间长河的一种投机。**
 
 **投机是对利润的追逐。**
 
+**何为市场：**市场是买家和卖家因为某种原因聚集在一起交换货物，进行交易的地方。市场扮演着连接金融和经济实体的主要角色。
 
+**独立面对盈亏：**
 
-- 何为市场：市场是买家和卖家因为某种原因聚集在一起交换货物，进行交易的地方。市场扮演着连接金融和经济实体的主要角色。
-- 独立面对盈亏：
-  - 获利的喜悦和亏损的痛苦是真实的，还需要考虑的就是，没有喜悦和痛苦的介入，能驾驭这些情感，是成为一名真正交易者的途径。
-  - 出色的投机客一定要知道什么时候进场，最重要的是，要知道什么时候作壁上观；最为重要的是，还要知道，一旦进场，什么时候离场。
-  - 在投资时，你应该有足够的自信心，你应该自己做决策，不去听从别人的推荐。你应该有耐心，等待有利时机的到来。股价大涨时你不介意追高，因为你知道买入的机会通常是当市场价格创新高的时候。相反的，当你意识到你做出了错误的决策时，你会立即离场。
-  - 你应该把亏损作为学习的机会，这样才能进步。
-  - 你应当把交易当做一项事业，把买入和卖出的交易记录下来
+获利的喜悦和亏损的痛苦是真实的，还需要考虑的就是，没有喜悦和痛苦的介入，能驾驭这些情感，是成为一名真正交易者的途径。
 
+- 出色的投机客一定要知道什么时候进场，最重要的是，要知道什么时候作壁上观；最为重要的是，还要知道，一旦进场，什么时候离场。
+- 在投资时，你应该有**足够的自信心**，你应该**自己做决策**，**不去听从别人的推荐**。你应该**有耐心**，等待有利时机的到来。
+- 股价大涨时你不介意追高，因为你知道买入的机会通常是当市场价格创新高的时候。相反的，当你意识到你做出了错误的决策时，你会立即离场。
+- 你应该把亏损作为学习的机会，这样才能进步。
+- 你应当把交易当做一项事业，把买入和卖出的交易记录下来
 
+**投资者 or 交易者：** 
 
-- 投资者 or 交易者： 
-  - 典型的投资者：没有一个关于自己的投资项目贬值时的计划。每当贬值的时候，他们继续抱着投资，希望价值能升回去。投资者们在牛市中成功，在熊市中却是亏损的。
-  - 交易者：有一个既定的计划或者策略，目的是把资金投入到市场中，获取利润。**他们不做任何投资，他们只做交易。**
-  - 长期进行趋势追踪的人就是交易者，不管他是否真的是在做交易。
-  - 趋势跟踪交易者会等到几周或几个月，迎接趋势的到来
+- **投资者：**没有一个关于自己的投资项目贬值时的计划。每当贬值的时候，他们继续抱着投资，希望价值能升回去，选择被套牢。**投资者们在牛市中成功，在熊市中却是亏损的。**
+- **交易者：**有一个**既定的计划或者策略**，目的是把资金投入到市场中，获取利润。**他们不做任何投资，他们只做交易。**
 
-- 基本分析 vs 技术分析：
-  - 基本分析：对影响特定市场供给及需求外部因素的研究。通过观察特定市场的供需情况，在这些情况反映在价格以前，预测市场情况的转变。
-  - 我们的基本哲学趋向是，变化是随机的。如果市场经过一段没有任何趋势的时期，那么趋势就会再次出现。那是未来趋势的先兆。我们觉得，如果市场再经过一段无趋势的时期，未来会出现壮观的趋势。
-  - 技术分析：理念为市场价格反映为所有影响供给和需求的已知因素。技术分析看到市场价格的本质，而不是评估市场外面的基本因素。技术分析交易者相信，对每日价格变化的谨慎分析，是利用价格趋势的有效方法。
-  - 技术分析有两种类型：
-    - 基于读图和使用指标来预测市场方向。
-    - 不预测市场方向，而是每当价格有所变动时，对市场的运动发生反应。趋势追踪交易者参与已经发生的，并非将要发生的。
+**基本分析 vs 技术分析：**
 
-- 感性交易 vs 机械交易：
-  - 感性交易：交易者基于自己对市场的了解，和对目前市场环境的看法，或若干其他因素，然后做出他们的买卖决策。
-  - 机械交易：以一套被自动化的和客观设定的规则为基础。交易者严格遵守这些交易原则，以便他们进出市场。
+- **基本分析：**对影响特定市场供给及需求外部因素的研究。通过观察特定市场的供需情况，在这些情况反映在价格以前，预测市场情况的转变。
+- **技术分析：**市场价格反映为所有影响供给和需求的已知因素。技术分析交易者相信，对每日价格变化的谨慎分析，是利用价格趋势的有效方法。
+
+  技术分析有两种类型：
+  - 基于**读图和使用指标**来预测市场方向。
+  - 不预测市场方向，而是每当价格有所变动时，对市场的运动发生反应。趋势追踪交易者参与已经发生的，并非将要发生的。
+
+**感性交易 vs 机械交易：**
+
+- **感性交易：**交易者基于自己对市场的了解，和对目前市场环境的看法，或若干其他因素，然后做出他们的买卖决策。这样的决策是主观的，可能会受制于行为的偏见。
+- 机械交易：以一套被**自动化的和客观设定的规则**为基础。交易者严格遵守这些交易原则，以便他们进出市场。
 
 **趋势追踪：永恒的投资策略：**
 
-- 对于生活来说，变化不是必须的，变化就是生活。
-
-- 接受无法逃避的变化是了解趋势跟踪哲学的第一步。
-
 **趋势追踪操作法则： 追随价格**
+
+趋势追踪交易者的决策基于一个核心信息： 价格
 
 **趋势跟踪测量： 截断亏损，让利润奔跑**
 
-- 精确的找出市场趋势的起点的尝试是徒劳的。
-- 趋势跟踪测量能够获得成功，有两个重要的假设。首先，市场价格趋势经常会发生。其次，可以设计出一套交易系统能从这些趋势中获利。趋势追踪最基本的交易策略是：截断亏损，让利润奔跑。
+趋势跟踪测量能够获得成功，有两个重要的假设。
+
+- 首先，市场价格趋势经常会发生。
+
+- 其次，可以设计出一套交易系统能从这些趋势中获利。
+
+   趋势追踪最基本的交易策略是：截断亏损，让利润奔跑。
 
 **以止损应对亏损：**
 
 - 只有在大波动中，才可以赚到大钱
 - 如果你不愿意接受损失，你就不能赚钱，就像只吸气，但是不愿意呼气
 
-##  伟大的趋势追踪交易者
+**趋势追踪是一种思维方式**
+
+
+
+##  第二章 伟大的趋势追踪交易者
 
 ### 比尔 顿
 
 **无论什么时候开始都不晚**
 
 - 在特定的点进入市场，如果市场价格下跌，在一个特定的点他就离场
-- 一个没有预先定义离场策略的交易，是要命的处方
+- 一个没有**预先定义离场策略的交易**，是要命的处方
 - 市场波动性越大，交易量越少；波动性越小，交易量越多
 
 如何做的：
 
 - 截断亏损：
-- 长期持有：持有时间在4年左右的，其收益率都是正的。 经验是在一个长期趋势中停留。
-- 复利
+- 长期持有：持有时间在4年左右的。 经验是**在一个长期趋势中停留**。
+- 复利：将利润重新投入交易
 - 恢复：你必须接受市场的下跌，了解行情将重拾升势的本源-因为趋势即将到来
 - 做空：顿经常做空，就像做多一样
 
@@ -83,10 +86,10 @@
 
 投资哲学：
 
-- 长期的趋势确认：交易系统忽视短期的波动性，尝试捕捉主要的市场趋势，追求更高级别的报酬。趋势可以持续几个月或几年。
-- 高度训练的投资程序：设计只保存最少量的任意决策的程序
-- 风险管理：交易者坚持严格的，程序化的风险管理系统，包括市场暴露评估，止损的准备和投入资金的风险管理，尝试在无趋势的情况下保护本金。
-- 全球的多元化：参与超过70个市场，不只是在一个国家或地区，以便抓住其他投资目标较集中的公司容易错过的机会。
+- **长期的趋势确认：**交易系统忽视短期的波动性，尝试捕捉主要的市场趋势，追求更高级别的报酬。趋势可以持续几个月或几年。
+- **高度训练的投资程序：**设计只保存最少量的任意决策的程序
+- **风险管理：**交易者坚持严格的，程序化的风险管理系统，包括市场暴露评估，止损的准备和投入资金的风险管理，尝试在无趋势的情况下保护本金。
+- **全球的多元化：**参与超过70个市场，不只是在一个国家或地区，以便抓住其他投资目标较集中的公司容易错过的机会。
 
 ### 艾德 斯科塔
 
