--- a/基金经理与基金选择.md
+++ b/基金经理与基金选择.md
@@ -13,7 +13,7 @@
 
 **张坤：**易方达中小盘（A股，110011），**易方达蓝筹精选（A+港，005827）**，消费+医药
 
-**朱少醒：****富国天惠精选成长A**（161005） -- 必须配
+**朱少醒：**富国天惠精选成长A（161005） -- 必须配
 
 **傅鹏博：**睿远成长价值A（007119）
 
@@ -27,6 +27,8 @@
 
 **傅友兴**：广发稳健增长A（270002）
 
+胡昕炜：汇添富消费行业混合（000083）
+
 ### 2. 新生代基金经理
 
 - 乔迁：兴全商业模式（163415）
@@ -34,6 +36,8 @@
 - 王崇：交银新成长混合（519736）
 - 归凯：嘉实新兴产业混合（000751），科技+医疗
 - 葛兰：中欧医疗健康A（003095），中欧医疗创新股票A（006228），医疗行业
+- 刘畅畅：华安文体健康混合
+- 林英睿：广发价值领先混合A
 
 ## 基金的配置组合
 
