--- a/老宋交易系统.md
+++ b/老宋交易系统.md
@@ -15,13 +15,11 @@
 - 卖出：
   - 如何找准卖出的时间点，能否持续盈利
 
-
-
 所以，本文针对不同的交易系统又分为几个不同的买入，持有，卖出。
 
 ## 交易系统1： 趋势交易系统
 
-以价值选股，以趋势选时。 5日线，14日线，20日线，34日线为指标。
+以价值选股，以趋势选时。 5日线，14日线，20日线，34日线为指标。本交易系统只是对一些常见情况的总结，而市场总是瞬息万变的，因此，实际情况需要自己看图多总结经验。
 
 操作遵循几个基本原则：
 
@@ -64,6 +62,11 @@
 - 当盈利非常丰厚时，以20日均线为操作， 当出现跌破20日均线且20日均线拐头向下时，卖出。
 - 当出现意外情况时（如未知利空）跌停时，立即卖出。
 
+### 5. 仓位管理
+
+待补充
+
+## 交易系统2： 困境反转股
 
 
 
@@ -73,35 +76,32 @@
 
 
 
+---
 
-## 选股 - 股票池
+## Questions
 
-### 1. 价值选股
+### 1. 什么是股票
 
-初步筛选的目的是为了能够获得较为合适的标的
 
-1. 净资产收益率(ROE) 连续3年均在20%左右，这样可以排除非优质，周期股
-2. 市盈率在30以下
-3. 净资产收益率，营业收入，净利润近几年呈现连续增长状态，
-4. 毛利率要高
-5. 利润总额要在1亿以上
-6. 必须是细分行业龙头
 
-鸡肉股在7月份入场，8月份出清，是一个很好的套利机会（前提是的确低估）。代表：民和股份。 [关于禽大周期的思考](https://xueqiu.com/6651873681/110664623)
+## 绝对禁止做的事情
 
-### 基本面选股
+- 不要玩期货，股指期货。
+- 不要玩次新股（上市两年以内）。 福蓉科技就是下场
+- 不要打板。
+- 不要追高，严格按照交易系统策略来，一旦错过买点，不在进入。
+- 不要提前进入，如果交易系统没有发出买入信号，就不要进入，进入必被抓，如2021年操作的艾米精密。
+- 不要再弱势环境里频繁操作。
+- 远离高位庄股
+- 不能成功封停的股票，要先出局观望
 
-- 选出净利润同比增长25%以上，且每股收益x元以上
-- 选出收入同比增长25%以上，每股收益*元以上
+## 一定要做的事情
 
-## 2. 交易
+- **大环境好，市场成交量急剧放大，追强势板块**。 如2014-2015， 2019年初
+- **整个板块盈利，基本面改善，个股盈利大爆发**。如17年的猪肉股，20年的有色煤炭钢铁，21年的半导体。
+- **板块大利好，并且板块容量小。** 
 
-选择已经度过一波下跌主升浪并进入窄幅横盘的股票， 一旦股价突破窄幅区间就快速进入。
 
-选择以5日均线，14日均线，34日均线系统
 
-## 趋势分析法实战经验
 
-- 不要在5日均线偏离14日均线太多时买入，风险太大
-- 如果没有在5日均线与14日均线交叉日附近买入，就不再买入
-- 不要听消息面，朋友推荐的股票
+
