--- a/理财类书籍笔记/趋势投资/雷公思想.md
+++ b/理财类书籍笔记/趋势投资/雷公思想.md
@@ -190,4 +190,13 @@
 - 最广泛的用户
 - 自由定价权
 - 自由竞争的市场
-- 市值空间
+- 市值空间 
+
+## 中概股的投资风险
+
+- 中概股财务不透明
+- 中美的贸易竞争
+- 企业很容易被政府取缔控制，不安全
+- 港股市场很烂，一个国家不可能只有一种货币
+- 不要买任何有政治风险的公司
+
