--- a/趋势交易日记.md
+++ b/趋势交易日记.md
@@ -48,3 +48,19 @@
   - 该股应该短期有回调需要接人上车， 可以选择20金叉60均线时进入
 
 烽火通信> 亨通光电 > 宏大爆破 > 华兰生物 >  用友网络 > 航天发展 
+
+
+
+## 2021-8-24
+
+- 艾迪精密： 明日买入。 买入理由：
+  - 20日线上穿60日均线
+  - 120均线将迅速下移，20均线在下方
+
+- 福蓉科技： 明日买入。 买入理由：
+  - 20日线上穿60日均线
+  - 20,60均在下方， 120将在一周内迅速下移
+
+- 中泰证券： 暂缓买入，买入理由：
+  - 20日抵扣价迅速下移， 20均线将在两周内金叉60均线
+
