--- a/宏观经济类书籍笔记/KK 大神 2010 关于房地产高论.md
+++ b/宏观经济类书籍笔记/KK 大神 2010 关于房地产高论.md
@@ -288,3 +288,25 @@
 
 ## 31. 古代的房地产
 
+
+
+## 32. 拉美的生活水平
+
+
+
+## 34. 人民币资产兑换转移
+
+
+
+
+
+## 35. 投资房产不是炒股
+
+
+
+## 36、 中国与西方最大的不同
+
+
+
+## 37. gdp 保8
+
