--- a/理财类书籍笔记/价值投资/1-工作五年决定你一生的财富.md
+++ b/理财类书籍笔记/价值投资/1-工作五年决定你一生的财富.md
@@ -9,7 +9,7 @@
 理财五年规划目标：总资产500w：
 
 - 学会炒股，每年收益率平均要在15%以上
-- 首付太原一套房
+- 首付苏州一套房
 - 资产500w
 - 搞定一门副业，该副业能稳定收入达到工资一半
 
@@ -22,17 +22,11 @@
 
 **前期先存钱，同时不断的学习财务知识，当存款到一定的数额，再去想如何提高收益率。**
 
-
-
-
-
 | 阶段     | 目标           | 完成时间 | 实现方式                |
 | -------- | -------------- | -------- | ----------------------- |
 | 第一阶段 | 实现第一个100w | 2023-1-1 | 存钱+理财+副业收入      |
 | 第二阶段 | 实现第一个300w | 2025-1-1 | 存钱+理财+副业收入+未知 |
 | 第三阶段 | 实现第一个500w | 未知     | 未知                    |
-
-
 
 ## 第二章： 存钱大作战 1.0 时代
 
@@ -93,8 +87,6 @@
 - **债券型基金：** 以国债，金融债等固定收益类金融工具为主要投资对象的基金，风险比较稳定，收益也稳定
 - **股票型基金：** 股票型基金是基金中风险最高的一种，资产总额的 60% 以上投资于股票的基金就是股票型基金。
 - **混合型基金：** 介于债券型基金和股票型基金之间，投资债市和股市的灵活性高。
-
-《伟大的博弈》
 
 股票风险：从短期看，风险巨大，从中期看，风险不大，从长期看，风险很小，从超长期看，风险没有。
 
@@ -172,7 +164,7 @@
 
 **熊市中永远不要满仓**
 
-富裕的中产阶级的标准：
+**富裕的中产阶级的标准：**
 
 - 市中心有一套地方不错，面积适中的住房，郊区有一套类似的别墅，没有负债
 - 家里有两部可以代步，性能良好，空间宽敞的汽车，没有负债
@@ -201,8 +193,6 @@ $$
 - 消费账户：用于日常的全部消费
 - 备用金账户：用来存备用应急资金
 - 投资账户：用来定投基金和黄金，以及为股市账户积攒现金
-
-
 
 ## 第八章： 你必须要拥有的理财技能
 
