--- a/理财类书籍笔记/价值投资/2 - 解读基金，我的投资观与实践.md
+++ b/理财类书籍笔记/价值投资/2 - 解读基金，我的投资观与实践.md
@@ -141,7 +141,7 @@
 
 ETF是交易型开放式指数基金，是一种在二级市场交易的基金品种，这种基金是按照相应指数的一篮子指数股票集合，在证券交易市场上可以像股票一样随时的买入卖出。
 
-ETF的不利之处在于它像股票一样，买卖的时候必须缴纳交易费，所以ETF 适合长期持有。
+**ETF的不利之处在于它像股票一样，买卖的时候必须缴纳交易费，所以ETF 适合长期持有。**
 
 沪深300 日变化率 = 0.67 沪180日变化率 + 0.33 深100日变化率
 
