--- a/理财类书籍笔记/价值投资/5 - 慢慢变富.md
+++ b/理财类书籍笔记/价值投资/5 - 慢慢变富.md
@@ -4,7 +4,7 @@
 
 **从过往经验看，富一次，慢慢富，是最佳的拥有财富的方式。**
 
-股票投资的密码，就4个字：选对，拿住。
+股票投资的密码，就4个字：**选对，拿住。**
 
 **必须从过去尽快富有的梦想中清醒过来，逐步接受你只能慢慢富有的现实。**
 
@@ -33,18 +33,18 @@
 
 价值投资大师分为三类：
 
-- 格雷厄姆派。 主张以低于清算价值，或低于营运资产1/3甚至更低的价格买入，然后等待市场充分反映价值时卖出。
-- 费雪的成长股投资派。更看重企业的显著经济特征，并且认为，伟大的公司是稀少的，一旦发现投资机会，比如它们在市场上一时失宠时，就要集中资金进行投资。
-- 巴菲特-芒格派。以合理价格买入优秀或伟大企业的股票，胜过以便宜的价格买入平庸企业的股票。
+- **格雷厄姆派。** 主张以低于清算价值，或低于营运资产1/3甚至更低的价格买入，然后等待市场充分反映价值时卖出。
+- **费雪的成长股投资派。**更看重企业的显著经济特征，并且认为，伟大的公司是稀少的，一旦发现投资机会，比如它们在市场上一时失宠时，就要集中资金进行投资。
+- **巴菲特-芒格派。**以合理价格买入优秀或伟大企业的股票，胜过以便宜的价格买入平庸企业的股票。
 
 **股价公道的伟大企业比股价超低的普通企业好**
 
 投资要趁早，以免将来有“白首方悔读书迟”的遗憾。
 
-- 本金少，正好练手。一个投资者成熟起来的最好方法是，先给他一小部分钱，让他赔掉一半以上或者全赔掉。
-- 投资者应该成熟之后，再下重注。
-- 投资者应该边做实业或工作，边投资。
-- 投资者要洞悉复利的本质。基数小的情况下容易产生较高的复利
+- **本金少，正好练手。**一个投资者成熟起来的最好方法是，先给他一小部分钱，让他赔掉一半以上或者全赔掉。
+- **投资者应该成熟之后，再下重注**。
+- 投资者应该**边做实业或工作，边投资**。
+- 投资者要洞悉**复利的本质**。基数小的情况下容易产生较高的复利
 
 **如果你的生活中除了股票没有别的，那将是失败的人生。**
 
@@ -59,7 +59,7 @@
 - 企业成长的钱
 - “市场先生”奖励的钱。
 
-一个公司的股价取决于两个因素：公司的净利润与市盈率。
+一个公司的股价取决于两个因素：**公司的净利润与市盈率**。
 
 从出发点和落脚点看，我们还是要赚企业成长的钱：
 
@@ -106,9 +106,9 @@
 
 
 
-投资策略： 与其预测风雨，不如打造诺亚方舟。与其猜测牛熊，不如见便宜便分段，分批买入股票，并以年为时间单位坚定持有。
+**投资策略：** 与其预测风雨，不如打造诺亚方舟。与其猜测牛熊，不如见便宜便分段，分批买入股票，并以年为时间单位坚定持有。
 
-卖出系统：股价被高估时，不会卖，除非基本面恶化，即商业模式被颠覆或竞争根基被动摇。原则上不做波段操作，坚决规避两种卖出：大跌“吓”得卖出，赚钱后“乐”的卖出。
+**卖出系统：**股价被高估时，不会卖，除非基本面恶化，即商业模式被颠覆或竞争根基被动摇。原则上不做波段操作，坚决规避两种卖出：大跌“吓”得卖出，赚钱后“乐”的卖出。
 
 持股座右铭：你不想持有10年，就不要持有1分钟
 
@@ -215,4 +215,40 @@
 
 
 ## 第五章： 修养篇
+
+
+
+**股市投资可以大大开阔我们的眼界，丰富我们的学识**
+
+**股市投资可以大大提升自己对人生哲学的认知，进而提高我们的人生修养**
+
+做学问，做事的三种境界：
+
+1. 昨夜西风凋碧树，独上高楼，望尽天涯路
+2. 衣带渐宽终不悔，为伊消得人憔悴
+3. 众里寻他千百度，蓦然回首，那人却在灯火阑珊处
+
+**投资要与优秀的成功企业并肩一起**
+
+A股市场研究透两家企业：
+
+- 贵州茅台：幸运且能干的企业
+- 格力电器：因能干而幸运的企业
+
+格雷厄姆：一个投资者最大的敌人不是股市，而是自己
+
+格雷厄姆三个重要原则：
+
+1. 将股票视为企业
+2. 安全边际
+3. 对待股市要有投资者的态度
+
+牛市的状态下要：
+
+1. 拒绝妖股
+2. 不追逐热点
+3. 不与人攀比
+4. 不用杠杆
+
+
 
