--- a/宏观经济类书籍笔记/财务自由之路.md
+++ b/宏观经济类书籍笔记/财务自由之路.md
@@ -2,6 +2,225 @@
 
 
 
+## 财务自由之路 1
+
+做出正确的决定，制定一个长期计划，使自己获得财务保障，甚至创造出一份财富，以此来改善自己的生活品质。
+
+
+
+
+
+## 第十四章： 你可以播种金钱
+
+
+
+
+
+
+
+## 展望
+
+
+
+
+
+
+
+### 第一章： 你真正想要的是什么
+
+乐观主义让你看到事物的积极面，而自信给你一种战胜事物黑暗面的信心。
+
+自信指的是，一个人在自身经历的基础上，知道他遇事可以依靠自己
+
+一个没有自信的人，只是一个一事无成，一无所有的无名小卒
+
+你的思维方式铸就了你今天的样子。这样的思维方式却不能让你变成你想成为的样子。
+
+生活五个领域：**健康，财务，关系，情感，人生意义。**
+
+永远不要为了金钱去做一些无趣的事情
+
+人生意义：指的是做自己认为有趣的，符合自己才能的，有益于他人的事情
+
+**将你的事业建立在你最大的爱好之上**
+
+**整天工作的人是没有时间赚钱的**
+
+认识你自己，弄清你真正感兴趣的是什么，之后再想一想你应该如何用你的爱好来赚钱。
+
+优化自己： 学习如何以最佳的方式来运用时间，方法，才能，金钱以及与他人合作，其目的是达到最优结果。如果你想优化你的生活，你就应该不断努力成为你能成为的最优秀的人。
+
+
+
+
+
+
+
+## 财务自由之路2
+
+### 自我分析
+
+- 我擅长哪些领域： 演讲和编程
+- 优点：在演讲分享方面比较有天赋
+- 收入与价值是否相符： 收入略低于我的价值
+- 目前还没有找到一份一劳永逸的工作来赚钱
+
+### 第一章 仓鼠之轮
+
+**富裕是指不费多大力气就能事半功倍，贫穷是指下很大功夫却事倍功半**
+
+赚钱的五种方式，后三种要比前两种赚的多的多
+
+- 员或工人：不为自己工作，而是为他人工作
+- 自由职业者：不自由，因为本身不可空缺，一旦空缺就没有了现金流
+- **投资者**： 税收和通货膨胀吞噬着微博的利润，投资者只能原地踏步
+- **企业家**： 一旦没有建立离开本人也可以正常运转的机制，那就没有自由可言
+- **专家**
+
+三种提高收入的方式：
+
+1. 如何能够在一个领域提高收入
+2. 如何就职于一个特定领域，同时又从另一个领域取得额外收益
+3. 如何实现飞跃，并且转换领域
+
+越努力工作的人越容易受到国家的惩罚。因为赚的越多，国家以税收和社会保障的形式带走的钱也就越多。
+
+**整天工作的人，没有时间赚钱 -- 洛克菲勒**
+
+财富属于那些和别人想法不同的人
+
+成功的人不将其目标依赖于目前状况
+
+**做大家都在做的事，只能得到大家都得到的东西**
+
+生命短暂，不应该碌碌无为
+
+### 第二章：书本知识与社会实践
+
+**敢于冒险和从终生实践中学习**
+
+如果真滴想赚很多钱，你就需要做好准备经历风险，并下定决心不断学习，不断成长。
+
+得到高收入需要满足的两个重要条件：
+
+1. 您的思考方式是怎样的，这种思考方式是否符合您目前所在领域。在您的工作中是否可以体现出您的价值？可否实现您的梦想和目标。
+2. 您对所从事的工作是否有热情？您所做的事情是您所热爱的吗？是否有更加能激发您热情的事物？
+
+正确的处理方式：
+
+- 首先通过克制自己去学习成为怎样的一个人
+- 然后去做正确的事情
+- 最后才能拥有我们梦寐以求的事物
+
+金钱和收入首先取决于思考的方式
+
+### 第三章： 新规则
+
+不公平的事情并不重要，重要的是我们如何应对
+
+每当一个新的时代开始，总是存在胜利者和失败者
+
+- 规则一：并非一次，而是多次
+  - 旧规则： 人们工作一次赚一次钱。有的人找一份尽可能高收入的工作，并且努力工作，他们就会收入可观
+  - 新规则： 您可以利用一份工作获得多次盈利。请您富有创造力，敢于冒险，并且为了尽可能的从一份工作获得收益而勇敢寻路
+- 规则二：能够出售
+  - 旧规则：最重要的商品是生产力。人们必须尽可能好的去出售生产力
+  - 新规则：在信息时代，想法是最重要的财富，请您思考一下，如何可以做到出售自己的好想法
+
+- 规则三：寻找顺应时代的榜样
+  - 旧规则：找一个榜样-拥有更加稳定职位的人，或者成为医生或律师。勤奋可以使人做到这一切。
+  - 新规则：向那些拥有一份工作并且以此为乐的人看齐。思考一下您的能力和爱好之所在，然后以此来发展自己的事业
+- 规则四：关心自己的安全感
+  - 旧规则：公司和国家关心我们。我们应该把钱放在安全的地方，我们最重要的投资就是我们的房产
+  - 新规则：我们必须关心我们自己。我们不能再把责任委托给他人。我们要自己追求富裕，同时经历冒险。我们的房子不是投资，而是奢侈
+- 规则五：为盈利参与竞争，经历冒险
+  - 旧规则： 躲避风险。风险带来的只有不必要的危险。人们参与竞争就应该不输
+  - 新规则：竞争是为了获利，去经历风险吧
+
+- 规则六：错误是好事
+  - 旧规则：错误是不好的，是愚蠢的象征，是未来的包袱
+  - 新规则：规则是一个人生活的证明，是对未来的投资。成功之路总是要经历错误
+- 规则七：不断学习，不断成长
+  - 旧规则：学习主要在学校，在进修期间进行；学习是件苦差事，毫无乐趣可言；学习之后就是工作生涯
+  - 新规则：我们应该穷尽一生不断学习，不断进步。即使离开了学校，学习的过程也没有停止。我们必须从实践中学习，从正在从事的工作中学习。
+- 规则八：重新开创自己的职业
+  - 旧规则：连续性是好的，永远不要把赢了比赛的马换给别人
+  - 新规则：自我提高是不够的。有时候您必须完全舍弃过去，重新给工作定位
+- 规则九：赚钱是一项游戏
+  - 旧规则：赚钱是辛苦的，毫无乐趣可言的。正直的人和受尊敬的人努力而勤奋的工作
+  - 新规则：做您所热爱的事情。找一份对您来说好像一场游戏的工作。只有这样您才会感觉很好，才会赚很多钱，才会有生活质量
+- 规则十：发展强项
+  - 旧规则：链条在最弱的环节断掉，因此要克服弱点
+  - 新规则：通往顶级收入的道路是 -- 发展强项
+- 规则十一：找到解决弱点的办法或将其转化为强项
+  - 旧规则：十全十美的个性使人非常愉悦，是令人成功的
+  - 新规则：为困扰您的缺点找一个解决办法，或者将其转变为强项。请您接受这样的现实：有能力的人大多都有许多缺点
+- 规则十二：工作，学习，定位是一体的。 那些不为未来做准备的人，不积极规划未来的人，会一直生活在过去。
+  - 旧规则：工作时间只是为了赚得口粮糊口。重点在于此时此地
+  - 新规则：应该将工作时间分为三部分：日常工作，学习以及将自己定义为专家。至少要拿出10%工作时间用于学习，20%时间用于定位自己；70%时间用于日常工作。一种理想分配方式是：1:1:1
+
+### 第四章 选择适合自己的领域
+
+永远不要在职员和自由职业者中寻找第二职业。
+
+贫困阶层期望短期拿到尽可能高的时薪；中产阶级希望得到一份好的收入；富人知道最重要的是创造财富。
+
+**富裕的人都把钱花在节省时间上**
+
+穷人为了赚钱而工作，中产为了赚钱更加努力的工作，富裕的人让金钱为他们工作。
+
+对待风险，富裕的人经历风险，他们把握着可控的不确定性。贫穷的人把风险看成一种可能产生损失的危险，富裕的人则把风险看成一次盈利的机会，而中产的人则把风险看成机遇与危险的并存。
+
+|                          | 穷人                 | 中产                           | 富人                           |
+| ------------------------ | -------------------- | ------------------------------ | ------------------------------ |
+| 工作                     | 找工作               | 找好的工作                     | 创造工作                       |
+| 财务困难                 | 把“我是穷人”挂在嘴边 | 说道：“我不是穷人，也不是富人” | 说道：“我目前破产了（暂时的）” |
+| 收入                     | 为了工作赚钱         | 为了赚更多的钱而更加努力的工作 | 金钱为他工作                   |
+| 如何对待金钱             | 存在消费债务         | 高负债+消费债务。需要支付利息  | 投资：获取利息                 |
+| 如何对待失望             |                      |                                |                                |
+| 对于冒险和投资的看法     |                      |                                |                                |
+| 不断学习和成长           | 看电视               | 主要依靠书本知识               | 主要通过社会实践，向榜样学习   |
+| 现金流管理               |                      |                                |                                |
+| 投资                     |                      |                                |                                |
+| 房产                     |                      |                                |                                |
+| 投资体系                 |                      |                                |                                |
+| 工作体系                 |                      |                                |                                |
+| 金钱和时间的关系         |                      |                                |                                |
+| 榜样，参谋               |                      |                                |                                |
+| 最大的经济目标           |                      |                                |                                |
+| 汽车及其他赢得声誉的事物 |                      |                                |                                |
+| 财务计划                 |                      |                                |                                |
+| 规则                     |                      |                                |                                |
+|                          |                      |                                |                                |
+
+
+
+
+
+### 第五章 强烈的兴趣 + 天赋 = 心流
+
+**成功意味着可以完全按照自己的计划去生活**
+
+产生心流状态的七个原因：
+
+1. 
+
+
+
+
+
+
+
+## 第十二章 业余时间
+
+重要的是在工作热情和工作能力之间找到平衡，去享受多姿多彩的生活。工作和积累财富只是生活的一半。家人，朋友，文化，读书和学习，开心，休息，体育和放松，这些都是不可忽视的。
+
+
+
+
+
+
+
 
 
 ## 财务自由之路 3
