--- a/我想要什么样的生活.md
+++ b/我想要什么样的生活.md
@@ -1,12 +1,58 @@
 # 我想要什么样的生活
 
+## 25-30 岁我人生的意义
+
+### 前言
+
+在我曾经的规划中， 30岁才能实现基本的free，我把自己30岁以后的生活堆的很满，似乎25-30这段时间就不存在了，但在2021年9月5日，偶然间想起我大学时认为的理想生活，只能感慨这世界不给普通人生活的权利呀。
+
+那么在25-30岁这5年， 我应该做什么，才能够丰富我人生的意义呢？ 这是我最近不断思考的问题。我的30岁不应该这样，我认为，前25年已经足够空白了，希望我接下来5年能丰富多彩一些。 
+
+为了丰富自己的生活，向身边的朋友学习，我决定在2021年逐渐确定我自己30岁这段时间的人生规划，人生不止是读书，赚钱，还有其他很多东西，我有些认可她们的话了。 
+
+ **此处留白，拭目以待**
 
 
-## 什么是财富自由
 
-财富自由指的啥某个人再不用满足生活必需而出售自己的时间。
+---
 
-财富自由不是终点，而是通往终点过程中的一个里程碑。
+# 30岁之后我的理想生活
+
+### 前言
+
+30岁的我，应该达到了基本的财富自由阶段（三线城市），应该不因钱财而劳累，不因感情而困惑，不因俗世而羁绊。
+
+### 理想的生活状态
+
+30岁的我，应该已经选择了自己将要定居的城市，希望从气候，感情，价格等角度选择一个适合养老的城市， 在该城市有一套大平层或别墅， 预估 100w 左右（首付即可）。
+
+30岁的我，应该在大城市如苏州，长沙等成长力较强的城市有一套投资性住房，保证自己的房产方面的投资。 预估 150w-200w（首付即可）。
+
+30岁的我，应该实现被动收入超过日常收入，被动收入应该包括投资性收入（500w本金，年化10%以上），副业收入等。 
+
+30岁的我，希望有个跟 iu 有着一样气质的女友。
+
+30岁的我，希望有着自己的事业，而不仅仅是工作。
+
+30岁我的，希望有一只可爱的英短或布偶，希望能够粘人一些。
+
+30岁的我，希望能够一年出去旅游1-2次，1次可能1-2个月左右。 
+
+30岁的我，希望有着腹肌，希望能够养成健身的习惯，希望能够健康成长。
+
+30岁的我，希望学会弹钢琴， 希望能学习系统的音乐。
+
+30岁的我，希望朋友在身边，或者在身边的能是朋友。
+
+30岁的我，希望有一辆车，不用太贵。
+
+30岁的我，希望可以学习做饭，毕竟我以前的梦想是个厨师啊。
+
+30岁的我，希望趋势交易大成，年化收益能做到30%。
 
 
+
+
+
+ 
 
