--- a/老宋基金投资计划.md
+++ b/老宋基金投资计划.md
@@ -5,7 +5,7 @@
 目前老宋的基金方面主要包括三个策略：
 
 - **被动性宽基指数基金定投**：主要包括三类：沪深300，上证50， 创业50， 科创50， 中证500
-- **被动性行业指数基金定投：**主要包括如有色，半导体，券商等行业指数基金
+- **被动性行业指数基金定投**：主要包括如有色，半导体，券商等行业指数基金
 - **主动性基金定投：** 打算采用3年为一周期的养蛊式基金定投，每3年进行一次优胜劣汰
 
 ## 指数基金 vs etf
@@ -20,13 +20,17 @@ etf的好处在于，首先是费用低，etf 每次交易只需要5元的手续
 - **参与宽基：** 沪深300， 创业50， 科创50， 中证500
 - **目前发展：** 考虑到目前创业板，科创板，中证500 泡沫相对较大，因此终止定投，只留下了沪深300的定投计划。每周定投。未来资金量上去这部分基金会配合**指数ETF**使用。 
 
-| 基金名称                     | 基金代码 | 指数    | 基金经理     |
-| ---------------------------- | -------- | ------- | ------------ |
-| 华宝沪深300指数增强A         | 003876   | 沪深300 | 徐林明、王正 |
-| 易方达上证50增强A            | 110003   | 上证50  | 张胜记       |
-| 申万菱信中证500指数优选增强A | 003986   | 中证500 | 刘敦         |
-| 华安创业板50指数             | 160420   | 创业50  | 刘璇子       |
-| 华夏科创板50ETF联接A         | 011612   | 科创50  | 荣膺、张弘弢 |
+| 基金名称                     | 基金代码 | 指数     | 基金经理     | 指数etf代码 |
+| ---------------------------- | -------- | -------- | ------------ | ----------- |
+| 华宝沪深300指数增强A         | 003876   | 沪深300  | 徐林明、王正 | 510300      |
+| 易方达上证50增强A            | 110003   | 上证50   | 张胜记       | 510050      |
+| 申万菱信中证500指数优选增强A | 003986   | 中证500  | 刘敦         | 510500      |
+| 华安创业板50指数             | 160420   | 创业50   | 刘璇子       | 159949      |
+| 华夏科创板50ETF联接A         | 011612   | 科创50   | 荣膺、张弘弢 | 588000      |
+|                              |          | 港股通50 |              | 513550      |
+|                              |          |          |              |             |
+|                              |          |          |              |             |
+|                              |          |          |              |             |
 
 ## 2. 被动性行业指数基金定投
 
@@ -34,19 +38,64 @@ etf的好处在于，首先是费用低，etf 每次交易只需要5元的手续
 - **可参与行业指数基金：** 有色金属，光伏，新能源，新能源车，碳中和，资源，钢铁，信息技术，金融，科技，港股通，消费，AI， 半导体，煤炭，银行，恒生指数，医药，眷属，房地产，传媒，军工，生物医药
 - **目前发展：** 考虑到目前一些板块存在严重抱团泡沫，因此暂未有发车计划。未来资金量上去这部分基金会配合**指数ETF**使用。 如果实在没买的，可以买点机场，航空类等疫情修复股票。
 
-| 基金名称                         | 基金代码 | 基金行业    | 基金经理 |
-| -------------------------------- | -------- | ----------- | -------- |
-| 易方达国防军工混合型证券投资基金 | 001475   | 军工        | 何崇恺   |
-| 农银新能源主题混合基金           | 002190   | 新能源      | 赵诣     |
-| 招商中证白酒指数                 | 161725   | 白酒        | 侯昊     |
-| 华夏国证半导体芯片ETF联接A       | 008887   | 半导体      | 赵宗庭   |
-| 中欧医疗健康A                    | 003095   | 医药        | 葛兰     |
-| 中欧医疗创新股票A                | 006228   | 医药-创新药 | 葛兰     |
-| 汇添富全球移动互联               | 001668   | 互联网      | 杨瑨     |
+| 基金名称                         | 基金代码 | 基金行业      | 基金经理 | 行业etf代码 |
+| -------------------------------- | -------- | ------------- | -------- | ----------- |
+|                                  |          | 大金融 - 证券 |          | 512880      |
+|                                  |          | 大金融- 银行  |          | 512800      |
+| 中欧医疗健康A                    | 003095   | 医药          | 葛兰     | 512010      |
+| 中欧医疗创新股票A                | 006228   | 医药-创新药   | 葛兰     | 159992      |
+| 招商中证白酒指数                 | 161725   | 白酒          | 侯昊     | 161725      |
+|                                  |          | 消费          |          | 510150      |
+|                                  |          | 家电          |          | 159996      |
+|                                  |          | 新能源车      |          | 515030      |
+| 农银新能源主题混合基金           | 002190   | 新能源        | 赵诣     | 516160      |
+| 汇添富全球移动互联               | 001668   | 互联网        | 杨瑨     | 513050      |
+| 华夏国证半导体芯片ETF联接A       | 008887   | 半导体        | 赵宗庭   | 512480      |
+|                                  |          | 信息技术      |          | 512330      |
+|                                  |          | 软件          |          | 515230      |
+|                                  |          | 科技          |          | 515000      |
+|                                  |          | 光伏          |          | 516880      |
+| 易方达国防军工混合型证券投资基金 | 001475   | 军工          | 何崇恺   | 512710      |
+|                                  |          | 煤炭          |          | 515220      |
+|                                  |          | 钢铁          |          | 515210      |
+|                                  |          | 有色金属      |          | 512400      |
+|                                  |          | 房地产        |          | 512220      |
+|                                  |          | 传媒          |          | 512980      |
+|                                  |          | 农业          |          | 159825      |
+|                                  |          |               |          |             |
+|                                  |          |               |          |             |
+|                                  |          |               |          |             |
+|                                  |          |               |          |             |
+|                                  |          |               |          |             |
+|                                  |          |               |          |             |
+|                                  |          |               |          |             |
 
 
 
 ## 主动性基金经理
+
+针对主动型基金经理的风格，我在这里将他们分为两种风格：保守型与进攻型。 
+
+- 保守型：牛弱熊强
+- 进攻型：牛强熊弱
+
+## 1. 保守型
+
+| 基金经理 | 基金名称 | 基金代码 | 年化利率 |
+| -------- | -------- | -------- | -------- |
+|          |          |          |          |
+|          |          |          |          |
+|          |          |          |          |
+|          |          |          |          |
+|          |          |          |          |
+|          |          |          |          |
+|          |          |          |          |
+
+
+
+
+
+
 
 **周应波：**中欧时代先锋A（001938），https://zhuanlan.zhihu.com/p/379628160
 
